commit translated contents

--- a/articles/active-directory-b2c/TOC.yml
+++ b/articles/active-directory-b2c/TOC.yml
@@ -238,12 +238,79 @@ items:
       items:
       - name: Viktig information
         href: active-directory-b2c-developer-notes-custom.md
-      - name: Providrar för SSO-session
-        href: active-directory-b2c-reference-sso-custom.md
-      - name: Språkanpassning
-        href: active-directory-b2c-language-customization-custom.md
       - name: Definition av betrott ramverk
         href: active-directory-b2c-reference-trustframeworks-defined-ief-custom.md
+      - name: Schema för Identity Experience Framework
+        items:
+        - name: TrustFrameworkPolicy
+          href: trustframeworkpolicy.md
+        - name: BuildingBlocks
+          href: buildingblocks.md
+          items:
+          - name: ClaimsSchema
+            href: claimsschema.md
+          - name: ClaimsTransformations
+            href: claimstransformations.md
+            items:
+            - name: Boolesk
+              href: boolean-transformations.md
+            - name: Date
+              href: date-transformations.md
+            - name: Allmänt
+              href: general-transformations.md
+            - name: Integer
+              href: integer-transformations.md
+            - name: JSON
+              href: json-transformations.md
+            - name: Sociala konton
+              href: social-transformations.md
+            - name: StringCollection
+              href: stringcollection-transformations.md
+            - name: Sträng
+              href: string-transformations.md
+          - name: Predikat
+            href: predicates.md
+          - name: ContentDefinitions
+            href: contentdefinitions.md
+          - name: Lokalisering
+            href: localization.md
+            items:
+            - name: Sträng-ID för lokalisering
+              href: localization-string-ids.md
+        - name: ClaimsProviders
+          href: claimsproviders.md
+          items:
+          - name: TechnicalProfiles
+            href: technicalprofiles.md
+            items:
+            - name: Om tekniska profiler
+              href: technical-profiles-overview.md
+            - name: Azure Active Directory
+              href: active-directory-technical-profile.md
+            - name: Anspråkstransformering
+              href: claims-transformation-technical-profile.md
+            - name: JWT-tokenutfärdare
+              href: jwt-issuer-technical-profile.md
+            - name: OAuth1
+              href: oauth1-technical-profile.md
+            - name: OAuth2
+              href: oauth2-technical-profile.md
+            - name: OpenId Connect
+              href: openid-connect-technical-profile.md
+            - name: REST
+              href: restful-technical-profile.md
+            - name: SAML
+              href: saml-technical-profile.md
+            - name: Självkontrollerad
+              href: self-asserted-technical-profile.md
+            - name: Session för enkel inloggning
+              href: active-directory-b2c-reference-sso-custom.md
+            - name: Validering
+              href: validation-technical-profile.md
+        - name: UserJourneys
+          href: userjourneys.md
+        - name: RelyingParty
+          href: relyingparty.md
   - name: Referens
     items:
     - name: Kodexempel
@@ -280,9 +347,9 @@ items:
     href: active-directory-b2c-support.md
   - name: Videoklipp
     href: https://azure.microsoft.com/documentation/videos/index/?services=active-directory-b2c
-ms.openlocfilehash: 485e7c5bbcfb1bde0b6626cab45eb2ad533f229d
-ms.sourcegitcommit: af60bd400e18fd4cf4965f90094e2411a22e1e77
+ms.openlocfilehash: 322272a48d228e102981b4e7f194704f39443953
+ms.sourcegitcommit: 5a9be113868c29ec9e81fd3549c54a71db3cec31
 ms.translationtype: HT
 ms.contentlocale: sv-SE
-ms.lasthandoff: 09/07/2018
-ms.locfileid: "44090633"
+ms.lasthandoff: 09/11/2018
+ms.locfileid: "44378694"
