--- a/articles/iot-central/index.yml
+++ b/articles/iot-central/index.yml
@@ -1,4 +1,10 @@
 ### YamlMime:YamlDocument
+ms.openlocfilehash: f8dcee53aecfcb7468d87c480c68f14715dea035
+ms.sourcegitcommit: 794bfae2ae34263772d1f214a5a62ac29dcec3d2
+ms.translationtype: HT
+ms.contentlocale: sv-SE
+ms.lasthandoff: 09/11/2018
+ms.locfileid: "44391580"
 documentType: LandingData
 title: Dokumentation om Azure IoT Central (förhandsversion)
 metadata:
@@ -11,15 +17,13 @@ metadata:
   ms.service: iot-central
   services: iot-central
   manager: timlt
-  ms.openlocfilehash: df6acc821183e7336d8079895c7494eed397eea1
-  ms.sourcegitcommit: 266fe4c2216c0420e415d733cd3abbf94994533d
-  ms.translationtype: HT
-  ms.contentlocale: sv-SE
-  ms.lasthandoff: 06/01/2018
-  ms.locfileid: "34628580"
 abstract:
   description: Azure IoT Central är en fullständigt hanterad SaaS-lösning (programvara som en tjänst) som gör det enkelt att ansluta, övervaka och hantera IoT-tillgångar i skala. Azure IoT Central förenklar den inledande installationen av IoT-lösningen och minskar administrationen och sänker driftkostnaderna och de övergripande kostnaderna för ett typiskt IoT-projekt. Lär dig hur du skapar, anpassar, hanterar och använder ett Azure IoT Central-program med våra snabbstarter och självstudier.
 sections:
+- title: Kommande förändring
+  items:
+  - type: paragraph
+    text: Azure IoT Central kommer att gå över till att använda IoT Hub Device Provisioning Service (DPS) för alla enhetsanslutningar under de kommande veckorna. När den här förändringen implementeras måste du uppdatera din enhetskod så att den använder SDK för DPS för att registrera och ansluta enheter. Alla program som använder den kontinuerliga funktionen för dataexport och/eller lösningsmallen för Power BI måste ändra mållagringscontainer och skapa en ny lösningsmall. <a href="https://aka.ms/iotcentral-create-technical-support-ticket">Kontakta vår tekniska support för att få mer information.</a>
 - title: Snabbstarter på 5 minuter
   items:
   - type: paragraph
