--- a/articles/service-fabric/toc.yml
+++ b/articles/service-fabric/toc.yml
@@ -48,9 +48,11 @@ items:
       href: service-fabric-tutorial-java-jenkins.md
   - name: Använd en befintlig .NET-app i container
     items:
-    - name: 1- Distribuera en .NET-app med hjälp av Docker Compose
+    - name: 1– Distribuera en .NET-app med hjälp av Docker Compose
       href: service-fabric-host-app-in-a-container.md
-    - name: 2- Övervaka din container
+    - name: 2 – Distribuera ett containerprogram med CI/CD
+      href: service-fabric-tutorial-deploy-container-app-with-cicd-vsts.md
+    - name: 3 – Övervaka din container
       href: service-fabric-tutorial-monitoring-wincontainers.md
   - name: Skapa en app för Linux-container
     items:
@@ -755,9 +757,9 @@ items:
     href: https://azure.microsoft.com/updates/?product=service-fabric
   - name: Videoklipp
     href: https://azure.microsoft.com/documentation/videos/index/?services=service-fabric
-ms.openlocfilehash: bd946de32b23863e2e60023db14931b298ca937a
-ms.sourcegitcommit: af9cb4c4d9aaa1fbe4901af4fc3e49ef2c4e8d5e
+ms.openlocfilehash: b204469b3d3dba8a9e8da870bcb3264e5089c4ca
+ms.sourcegitcommit: 5a9be113868c29ec9e81fd3549c54a71db3cec31
 ms.translationtype: HT
 ms.contentlocale: sv-SE
 ms.lasthandoff: 09/11/2018
-ms.locfileid: "44346622"
+ms.locfileid: "44380326"
