--- a/articles/active-directory/manage-apps/toc.yml
+++ b/articles/active-directory/manage-apps/toc.yml
@@ -95,7 +95,7 @@ items:
     - name: Ändra namn eller logotyp
       href: change-name-or-logo-portal.md
     - name: Självstudier för SaaS-appar
-      href: ../saas-apps/tutorial-list.md
+      href: /azure/active-directory/saas-apps/tutorial-list?context=azure/active-directory/manage-apps/context/manage-apps-context
   - name: Integration av en lokal app
     items:
     - name: Aktivera Application Proxy
@@ -265,7 +265,7 @@ items:
 - name: Resurser
   items:
   - name: Distributionsscheman för Azure AD
-    href: ../fundamentals/active-directory-deployment-plans.md
+    href: /azure/active-directory/fundamentals/active-directory-deployment-plans?context=azure/active-directory/manage-apps/context/manage-apps-context
   - name: Azures feedbackforum
     href: https://feedback.azure.com/forums/169401-azure-active-directory
   - name: Azure-översikt
@@ -282,9 +282,9 @@ items:
     href: http://stackoverflow.com/questions/tagged/azure-active-directory
   - name: Videoklipp
     href: https://azure.microsoft.com/documentation/videos/index/?services=active-directory
-ms.openlocfilehash: de8f961b5f39751aac95c7fcde47a73c848ef96e
-ms.sourcegitcommit: c29d7ef9065f960c3079660b139dd6a8348576ce
+ms.openlocfilehash: 24452d3c2d5991f9dc81b9d740ec9473e2b8a1e0
+ms.sourcegitcommit: e2ea404126bdd990570b4417794d63367a417856
 ms.translationtype: HT
 ms.contentlocale: sv-SE
-ms.lasthandoff: 09/12/2018
-ms.locfileid: "44721797"
+ms.lasthandoff: 09/14/2018
+ms.locfileid: "45579896"
