commit translated contents

--- a/articles/iot-accelerators/toc.yml
+++ b/articles/iot-accelerators/toc.yml
@@ -87,8 +87,8 @@ items:
       href: iot-accelerators-remote-monitoring-deploy-local.md
     - name: Visualisera telemetri med PowerBI
       href: iot-accelerators-integrate-data-powerbi.md
-    - name: Visualisera telemetri med Time Series Insights
-      href: iot-accelerators-remote-monitoring-time-series-insights.md
+    - name: Integrera Azure Time Series Insights med fjärrövervakning
+      href: iot-accelerators-remote-monitoring-integrate-time-series-insights.md
     - name: Analysera telemetri med Data Lake
       href: iot-accelerators-integrate-data-lake.md
     - name: Konfigurera rollbaserad åtkomstkontroll
@@ -252,9 +252,9 @@ items:
     href: https://stackoverflow.com/questions/tagged/azure-iot-suite
   - name: Utbildningsväg för IoT-lösningsacceleratorer
     href: https://azure.microsoft.com/documentation/learning-paths/iot-suite/
-ms.openlocfilehash: 282973e57463e36fbc0e1109194b4f9c3027eed1
-ms.sourcegitcommit: 5a9be113868c29ec9e81fd3549c54a71db3cec31
+ms.openlocfilehash: 14fd0072f0112454f078c93e904c95bd57e4fcff
+ms.sourcegitcommit: f983187566d165bc8540fdec5650edcc51a6350a
 ms.translationtype: HT
 ms.contentlocale: sv-SE
-ms.lasthandoff: 09/11/2018
-ms.locfileid: "44377674"
+ms.lasthandoff: 09/13/2018
+ms.locfileid: "45542811"
