--- a/articles/cosmos-db/TOC.yml
+++ b/articles/cosmos-db/TOC.yml
@@ -119,7 +119,7 @@ items:
   items:
   - name: SQL API-dokument
     items:
-    - name: Översikt
+    - name: Introduktion
       href: sql-api-introduction.md
     - name: Skriva SQL-frågor
       href: sql-api-sql-query.md
@@ -221,7 +221,7 @@ items:
         href: sql-api-sql-query-reference.md
   - name: MongoDB API-dokument
     items:
-    - name: Översikt
+    - name: Introduktion
       href: mongodb-introduction.md
     - name: Stöd för MongoDB
       href: mongodb-feature-support.md
@@ -271,7 +271,7 @@ items:
         href: mongodb-indexing.md
   - name: Dokument för Gremlin-API
     items:
-    - name: Översikt
+    - name: Introduktion
       href: graph-introduction.md
     - name: Gremlin-support
       href: gremlin-support.md
@@ -285,7 +285,7 @@ items:
         href: bulk-executor-graph-dotnet.md
   - name: Dokument för API för Cassandra
     items:
-    - name: Översikt
+    - name: Introduktion
       href: cassandra-introduction.md
     - name: Självstudier
       items:
@@ -295,7 +295,7 @@ items:
         href: cassandra-import-data.md
   - name: Dokument för tabell-API
     items:
-    - name: Översikt
+    - name: Introduktion
       href: table-introduction.md
     - name: Självstudier
       items:
@@ -460,9 +460,9 @@ items:
       href: use-cases.md
     - name: Appar för sociala medier
       href: social-media-apps.md
-ms.openlocfilehash: d36c53605ad79fcb6d2d54dac27894691f8398e8
-ms.sourcegitcommit: c29d7ef9065f960c3079660b139dd6a8348576ce
+ms.openlocfilehash: 2bc1fcfab7399cc52500b832721e7ca7509758fd
+ms.sourcegitcommit: 1b561b77aa080416b094b6f41fce5b6a4721e7d5
 ms.translationtype: HT
 ms.contentlocale: sv-SE
-ms.lasthandoff: 09/12/2018
-ms.locfileid: "44720879"
+ms.lasthandoff: 09/17/2018
+ms.locfileid: "45737285"
