--- a/articles/cognitive-services/LUIS/toc.yml
+++ b/articles/cognitive-services/LUIS/toc.yml
@@ -52,35 +52,35 @@ items:
   items:
   - name: Bygg en app
     items:
-    - name: 1. Med anpassad domän
+    - name: 1. Fastställ användaravsikter
       href: luis-quickstart-intents-only.md
-    - name: 2. Lägg till fördefinierade avsikter och entiteter
+    - name: 2. Identifiera vanliga avsikter
       href: luis-tutorial-prebuilt-intents-entities.md
-    - name: 3. Lägg till entitet för reguljära uttryck
+    - name: 3. Extrahera välutformade data
       href: luis-quickstart-intents-regex-entity.md
-    - name: 4. Lägg till listentitet
+    - name: 4. Extrahera exakta textmatchningar
       href: luis-quickstart-intent-and-list-entity.md
-    - name: 5. Lägg till hierarkisk entitet
+    - name: 5. Extrahera sammanhangsbaserade data
       href: luis-quickstart-intent-and-hier-entity.md
-    - name: 6. Lägg till sammansatt entitet
+    - name: 6. Gruppera och extrahera relaterade data
       href: luis-tutorial-composite-entity.md
-    - name: 7. Lägg till en enkel entitet och fraslista
+    - name: 7. Extrahera namn
       href: luis-quickstart-primary-and-secondary-data.md
-    - name: 8. Lägga till keyPhrase-entitet
+    - name: 8. Extrahera nyckelfraser
       href: luis-quickstart-intent-and-key-phrase.md
-    - name: 9. Lägga till attitydanalys
+    - name: 9. Extrahera sentiment
       href: luis-quickstart-intent-and-sentiment-analysis.md
   - name: Förbättra appen
     items:
-    - name: Granska slutpunktsyttranden
+    - name: 1. Åtgärda osäkra förutsägelser
       href: luis-tutorial-review-endpoint-utterances.md
-    - name: Med batch-test
+    - name: 2. Datauppsättningar för batch-test
       href: luis-tutorial-batch-testing.md
-    - name: Med mönster
+    - name: 3. Lägg till vanliga yttrandeformat
       href: luis-tutorial-pattern.md
-    - name: Med roller
+    - name: 4. Extrahera sammanhangsbaserade mönster
       href: luis-tutorial-pattern-roles.md
-    - name: Med Pattern.any-entitet
+    - name: 5. Extrahera friformsdata
       href: luis-tutorial-pattern-any.md
 - name: Exempel
   items:
@@ -200,7 +200,7 @@ items:
       href: luis-interactive-test.md
     - name: Batch-testning
       href: luis-how-to-batch-test.md
-  - name: Publicera app
+  - name: Publicera
     href: luis-how-to-publish-app.md
   - name: Använd fördefinierade modeller
     items:
@@ -364,9 +364,9 @@ items:
     href: https://blog.botframework.com/category/luis/
   - name: Kunskapsbas
     href: https://cognitive.uservoice.com/knowledgebase/topics/127872-luis-language-understanding-intelligent-service
-ms.openlocfilehash: a64c1a61193e6c998eeb8d9953ca3382277f27e3
-ms.sourcegitcommit: 3d0295a939c07bf9f0b38ebd37ac8461af8d461f
+ms.openlocfilehash: 6c8c1e93de904de2624a34a8e81bcb225cbce6d6
+ms.sourcegitcommit: ab9514485569ce511f2a93260ef71c56d7633343
 ms.translationtype: HT
 ms.contentlocale: sv-SE
-ms.lasthandoff: 09/06/2018
-ms.locfileid: "43842014"
+ms.lasthandoff: 09/15/2018
+ms.locfileid: "45630298"
