--- a/articles/terraform/toc.yml
+++ b/articles/terraform/toc.yml
@@ -40,14 +40,18 @@ items:
     items:
     - name: Installera Terraform Visual Studio Code-tillägget
       href: terraform-vscode-extension.md
-- name: Begrepp
-  items:
-  - name: Azure Cloud Shell-integrering
-    href: terraform-cloud-shell.md
 - name: Exempel
   items:
   - name: Konfigurationsmallar
     href: https://github.com/terraform-providers/terraform-provider-azurerm/tree/master/examples
+- name: Begrepp
+  items:
+  - name: Azure Cloud Shell-integrering
+    href: terraform-cloud-shell.md
+- name: Instruktionsguider
+  items:
+  - name: Lagra tillstånd i Azure Storage
+    href: terraform-backend.md
 - name: Referens
   items:
   - name: Azure-modulregister
@@ -60,9 +64,9 @@ items:
     href: https://azure.microsoft.com/solutions/devops/terraform/
   - name: Azure-översikt
     href: https://azure.microsoft.com/roadmap/
-ms.openlocfilehash: e6c4637618d794f96db8ed9ca8eb063a62f704a1
-ms.sourcegitcommit: 31241b7ef35c37749b4261644adf1f5a029b2b8e
+ms.openlocfilehash: 6378b8e647afa95666e0a996b546c8d4147e038e
+ms.sourcegitcommit: 616e63d6258f036a2863acd96b73770e35ff54f8
 ms.translationtype: HT
 ms.contentlocale: sv-SE
-ms.lasthandoff: 09/04/2018
-ms.locfileid: "43663544"
+ms.lasthandoff: 09/14/2018
+ms.locfileid: "45604034"
