commit translated contents

--- a/articles/sql-database/toc.yml
+++ b/articles/sql-database/toc.yml
@@ -313,40 +313,40 @@ items:
     items:
     - name: Övervaka och finjustera
       href: sql-database-troubleshoot-performance.md
-    - name: Prestandaövervakning
-      href: sql-database-single-database-monitor.md
-    - name: Prestandarekommendationer
-      href: sql-database-advisor.md
-    - name: Intelligent frågebearbetning
+    - name: Intelligent prestanda
       items:
+      - name: Prestandaövervakning
+        href: sql-database-single-database-monitor.md
       - name: Intelligent frågebearbetning
         href: https://docs.microsoft.com/sql/relational-databases/performance/intelligent-query-processing?toc=/azure/sql-database/toc.json
       - name: Anpassningsbar frågebearbetning
         href: https://docs.microsoft.com/sql/relational-databases/performance/adaptive-query-processing?toc=/azure/sql-database/toc.json
-    - name: Automatisk inställning
-      items:
       - name: Automatisk inställning
-        href: sql-database-automatic-tuning.md
-      - name: Aktivera automatisk inställning
-        href: sql-database-automatic-tuning-enable.md
-      - name: Aktivera e-postaviseringar
-        href: sql-database-automatic-tuning-email-notifications.md
-    - name: Intelligent Insights
-      items:
+        items:
+        - name: Automatisk inställning
+          href: sql-database-automatic-tuning.md
+        - name: Aktivera automatisk inställning
+          href: sql-database-automatic-tuning-enable.md
+        - name: Prestandarekommendationer
+          href: sql-database-advisor.md
+        - name: Prestandarekommendationer
+          href: sql-database-performance.md
+        - name: Tillämpa prestandarekommendationer
+          href: sql-database-advisor-portal.md
+        - name: Aktivera e-postaviseringar
+          href: sql-database-automatic-tuning-email-notifications.md
       - name: Intelligent Insights
-        href: sql-database-intelligent-insights.md
-      - name: Diagnostikloggning
-        href: sql-database-metrics-diag-logging.md
-      - name: Använda diagnostikloggar
-        href: sql-database-intelligent-insights-use-diagnostics-log.md
-      - name: Prestandafelsökning
-        href: sql-database-intelligent-insights-troubleshoot-performance.md
-    - name: Prestandarekommendationer
-      href: sql-database-performance.md
-    - name: Använda Query Performance Insight
-      href: sql-database-query-performance.md
-    - name: Tillämpa prestandarekommendationer
-      href: sql-database-advisor-portal.md
+        items:
+        - name: Intelligent Insights
+          href: sql-database-intelligent-insights.md
+        - name: Diagnostikloggning
+          href: sql-database-metrics-diag-logging.md
+        - name: Använda diagnostikloggar
+          href: sql-database-intelligent-insights-use-diagnostics-log.md
+        - name: Prestandafelsökning
+          href: sql-database-intelligent-insights-troubleshoot-performance.md
+      - name: Använda Query Performance Insight
+        href: sql-database-query-performance.md
     - name: Manuell inställning
       items:
       - name: Manuell inställning
@@ -616,9 +616,9 @@ items:
     href: /azure/architecture/
   - name: Kundberättelser
     href: http://customers.microsoft.com/en-us/search?sq=%22Azure%20SQL%20Database%22&ff=&p=0&so=story_publish_date%20desc
-ms.openlocfilehash: 97b7f99440510e8a4a72cb0e3b18c54839f0c0c6
-ms.sourcegitcommit: ab9514485569ce511f2a93260ef71c56d7633343
+ms.openlocfilehash: fe88a6f7559e6c5c44c2bf39e3167dd379f4b006
+ms.sourcegitcommit: 1b561b77aa080416b094b6f41fce5b6a4721e7d5
 ms.translationtype: HT
 ms.contentlocale: sv-SE
-ms.lasthandoff: 09/15/2018
-ms.locfileid: "45634480"
+ms.lasthandoff: 09/17/2018
+ms.locfileid: "45730100"
