--- a/articles/cognitive-services/Bing-Image-Search/toc.yml
+++ b/articles/cognitive-services/Bing-Image-Search/toc.yml
@@ -34,14 +34,10 @@ items:
       href: image-sdk-java-quickstart.md
 - name: Självstudier
   items:
-  - name: Enkelsidig webbapp
+  - name: Skapa en webbapp för bildsökning
     href: tutorial-bing-image-search-single-page-app.md
-  - name: Enkelsidig webbapp (källkod)
-    href: tutorial-bing-image-search-single-page-app-source.md
-  - name: Bilduppladdning i Bing för information
+  - name: Extrahera bildinformation
     href: tutorial-image-post.md
-  - name: Bilduppladdning i Bing för information (källkod)
-    href: tutorial-image-post-source.md
 - name: Exempel
   items:
   - name: Kodexempel
@@ -104,9 +100,9 @@ items:
     href: UseAndDisplayRequirements.md
   - name: Analys för API för bildsökning i Bing
     href: bing-image-stats.md
-ms.openlocfilehash: 452891c553ba69ba30ab74925ddd19289f8dbee6
-ms.sourcegitcommit: e2ea404126bdd990570b4417794d63367a417856
+ms.openlocfilehash: 74cc9f56aa4d559c7e2644fc6866ae3d97f158f6
+ms.sourcegitcommit: cf606b01726df2c9c1789d851de326c873f4209a
 ms.translationtype: HT
 ms.contentlocale: sv-SE
-ms.lasthandoff: 09/14/2018
-ms.locfileid: "45576722"
+ms.lasthandoff: 09/19/2018
+ms.locfileid: "46296302"
