--- a/articles/iot-edge/TOC.yml
+++ b/articles/iot-edge/TOC.yml
@@ -42,6 +42,8 @@ items:
   items:
   - name: IoT Edge-körning
     href: iot-edge-runtime.md
+  - name: IoT Edge-certifikat
+    href: iot-edge-certs.md
   - name: IoT Edge-moduler
     href: iot-edge-modules.md
     items:
@@ -56,8 +58,9 @@ items:
   - name: IoT Edge-enhet som en gateway
     href: iot-edge-as-gateway.md
   - name: Säkerhet
-    href: security.md
     items:
+    - name: Skydda Azure IoT Edge
+      href: security.md
     - name: Säkerhetshanteraren för IoT Edge
       href: iot-edge-security-manager.md
   - name: Plattformssupport
@@ -204,9 +207,9 @@ items:
     href: https://microsoft.github.io/techcasestudies/#technology=IoT&sortBy=featured
   - name: Videoklipp
     href: https://azure.microsoft.com/documentation/videos/index/?services=iot-hub
-ms.openlocfilehash: 5df1ba3edec8108d1fd869778cf0e009296c3e92
-ms.sourcegitcommit: f983187566d165bc8540fdec5650edcc51a6350a
+ms.openlocfilehash: d2dcc4e642e997903c01b6b375505e88e412d57b
+ms.sourcegitcommit: cf606b01726df2c9c1789d851de326c873f4209a
 ms.translationtype: HT
 ms.contentlocale: sv-SE
-ms.lasthandoff: 09/13/2018
-ms.locfileid: "45543919"
+ms.lasthandoff: 09/19/2018
+ms.locfileid: "46294483"
