--- a/articles/security-center/TOC.yml
+++ b/articles/security-center/TOC.yml
@@ -32,13 +32,16 @@ items:
     href: security-center-data-security.md
 - name: Instruktionsguider
   items:
+  - name: Förbättra dina säkerhetspoäng
+    href: security-center-secure-score.md
   - name: Uppgradera till avancerad säkerhet
     href: security-center-onboarding.md
   - name: Serverskydd med Windows Defender ATP (förhandsversion)
     href: security-center-wdatp.md
-  - name: Ange säkerhetsprincip
   - name: Ange säkerhetsprinciper
     href: security-center-azure-policy.md
+  - name: Anpassa informationsskyddsprincipen
+    href: security-center-info-protection-policy.md
   - name: Inställningar för säkerhetsprincip
     href: security-center-policies-overview.md
     items:
@@ -62,30 +65,36 @@ items:
     - name: Säkerhet för Compute och appar
       href: security-center-virtual-machine-protection.md
       items:
-      - name: Rekommendationer för virtuella datorer
+      - name: Rekommendationer för datorer och virtuella datorer
         href: security-center-virtual-machine-recommendations.md
-      - name: Tillämpa diskkryptering
-        href: security-center-apply-disk-encryption.md
-      - name: Tillämpa systemuppdateringar
-        href: security-center-apply-system-updates.md
-      - name: Aktivera kryptering för lagringskonto
-        href: security-center-enable-encryption-for-storage-account.md
-      - name: Aktivera VM-Agent
-        href: security-center-enable-vm-agent.md
-      - name: Installera slutpunktsskydd
-        href: security-center-install-endpoint-protection.md
-      - name: Starta om datorn efter uppdateringarna
-        href: security-center-apply-system-updates.md#reboot-after-system-updates
-      - name: Åtgärda säkerhetskonfigurationer
-        href: security-center-remediate-os-vulnerabilities.md
-      - name: Uppdatera OS-versionen
-        href: security-center-update-os-version.md
-      - name: Sårbarhetsbedömning inte installerad
-        href: security-center-vulnerability-assessment-recommendations.md
-      - name: Lägg till en brandvägg för webbappar
+        items:
+        - name: Tillämpa diskkryptering
+          href: security-center-apply-disk-encryption.md
+        - name: Tillämpa systemuppdateringar
+          href: security-center-apply-system-updates.md
+        - name: Aktivera kryptering för lagringskonto
+          href: security-center-enable-encryption-for-storage-account.md
+        - name: Aktivera VM-Agent
+          href: security-center-enable-vm-agent.md
+        - name: Installera slutpunktsskydd
+          href: security-center-install-endpoint-protection.md
+        - name: Starta om datorn efter uppdateringarna
+          href: security-center-apply-system-updates.md#reboot-after-system-updates
+        - name: Åtgärda säkerhetskonfigurationer
+          href: security-center-remediate-os-vulnerabilities.md
+        - name: Uppdatera OS-versionen
+          href: security-center-update-os-version.md
+        - name: Sårbarhetsbedömning inte installerad
+          href: security-center-vulnerability-assessment-recommendations.md
+      - name: Rekommendationer för appar
         href: security-center-add-web-application-firewall.md
-      - name: Slutföra programskydd
-        href: security-center-add-web-application-firewall.md#finalize-application-protection
+        items:
+        - name: Lägg till en brandvägg för webbappar
+          href: security-center-add-web-application-firewall.md
+        - name: Slutföra programskydd
+          href: security-center-add-web-application-firewall.md#finalize-application-protection
+      - name: Rekommendationer för containers
+        href: security-center-container-recommendations.md
     - name: Nätverkssäkerhet
       href: security-center-network-recommendations.md
       items:
@@ -97,7 +106,7 @@ items:
         href: security-center-restrict-access-through-internet-facing-endpoints.md
       - name: Dirigera trafiken endast via NGFW
         href: security-center-add-next-generation-firewall.md#route-traffic-through-ngfw-only
-    - name: Lagring och datasäkerhet
+    - name: Data- och lagringssäkerhet
       href: security-center-sql-service-recommendations.md
       items:
       - name: Aktivera granskning och hotidentifiering på SQL-databaser
@@ -106,12 +115,12 @@ items:
         href: security-center-enable-auditing-on-sql-servers.md
       - name: Aktivera transparent datakryptering
         href: security-center-enable-transparent-data-encryption.md
-    - name: Identitet och åtkomst
+    - name: Övervaka identitet och åtkomst
       href: security-center-identity-access.md
+    - name: Hantera Just-in-time-åtkomst
+      href: security-center-just-in-time.md
   - name: Tillämpa molnskydd
     items:
-    - name: Just-in-time-åtkomst
-      href: security-center-just-in-time.md
     - name: Anpassningsbara programkontroller
       href: security-center-adaptive-application.md
     - name: Övervakning av filintegritet
@@ -170,6 +179,8 @@ items:
       href: security-center-review-policy-compliance.md
     - name: Utvärdera prenumerationer (REST)
       href: security-center-compliance-rest-api.md
+    - name: Automatisera registrering med PowerShell
+      href: security-center-powershell-onboarding.md
   - name: Scenarier
     items:
     - name: Incidenthantering
@@ -212,9 +223,9 @@ items:
     href: https://azure.microsoft.com/updates/?product=security-center
   - name: Regional tillgänglighet
     href: https://azure.microsoft.com/regions/services/
-ms.openlocfilehash: 12f463c36edef411f42ff17f2126284a0c89983e
-ms.sourcegitcommit: c29d7ef9065f960c3079660b139dd6a8348576ce
+ms.openlocfilehash: 93407b8b90f31d9297e32eaa4215efc5f57b1b0a
+ms.sourcegitcommit: cf606b01726df2c9c1789d851de326c873f4209a
 ms.translationtype: HT
 ms.contentlocale: sv-SE
-ms.lasthandoff: 09/12/2018
-ms.locfileid: "44716901"
+ms.lasthandoff: 09/19/2018
+ms.locfileid: "46294304"
