--- a/articles/site-recovery/toc.yml
+++ b/articles/site-recovery/toc.yml
@@ -150,6 +150,8 @@ items:
       items:
       - name: Aktivera Azure till Azure-replikering
         href: azure-to-azure-how-to-enable-replication.md
+      - name: Aktivera Azure till Azure-replikering för krypterade virtuella datorer
+        href: azure-to-azure-how-to-enable-replication-ade-vms.md
       - name: Skydda datorer igen från en sekundär Azure-region till en primär
         href: azure-to-azure-how-to-reprotect.md
     - name: Felsökning
@@ -392,9 +394,9 @@ items:
     href: https://azure.microsoft.com/pricing/calculator/
   - name: Tjänstuppdateringar
     href: https://azure.microsoft.com/updates/?product=site-recovery
-ms.openlocfilehash: df857d7ed0878dc4375ddc34f45e80f7e78c0e39
-ms.sourcegitcommit: c29d7ef9065f960c3079660b139dd6a8348576ce
+ms.openlocfilehash: f011d95ff726764db664fb5a3c77b7250f2a5e04
+ms.sourcegitcommit: cf606b01726df2c9c1789d851de326c873f4209a
 ms.translationtype: HT
 ms.contentlocale: sv-SE
-ms.lasthandoff: 09/12/2018
-ms.locfileid: "44715167"
+ms.lasthandoff: 09/19/2018
+ms.locfileid: "46297562"
