--- a/articles/active-directory/reports-monitoring/index.yml
+++ b/articles/active-directory/reports-monitoring/index.yml
@@ -1,12 +1,12 @@
 ### YamlMime:YamlDocument
-ms.openlocfilehash: 2217adbbb9e5222e6c33bfcdce41c30396c7f231
-ms.sourcegitcommit: 1b561b77aa080416b094b6f41fce5b6a4721e7d5
+ms.openlocfilehash: 95341f318a9902a82ecb0366400ec34d159f0225
+ms.sourcegitcommit: ce526d13cd826b6f3e2d80558ea2e289d034d48f
 ms.translationtype: HT
 ms.contentlocale: sv-SE
-ms.lasthandoff: 09/17/2018
-ms.locfileid: "45740328"
+ms.lasthandoff: 09/19/2018
+ms.locfileid: "46363691"
 documentType: LandingData
-title: Rapporter och övervakning i Azure AD
+title: Rapporter och övervakning i Azure Active Directory
 metadata:
   document_id: 
   title: Dokumentation om rapporter och övervakning i Azure Active Directory – självstudier, snabbstarter, begrepp | Microsoft Docs
@@ -22,7 +22,7 @@ metadata:
   ms.date: 08/14/2018
   ms.author: priyamo
 abstract:
-  description: Se hur du visar säkerhets- och granskningsrapporter för din miljö, och övervakar dem över tid för att få insikter i användningsmönster. Med Azure AD-rapporter kan du få insikter i säkerhets- och användningsmönstren i din miljö. Du kan till exempel besvara följande frågor:<ul><li>Hur används programmen eller tjänsterna av användarna?</li><li>Vilka är de potentiella riskerna som påverkar hälsotillståndet för miljön?</li><li>Hur felsöker du problem som hindrar användarna från att uträtta sitt arbete?</li>
+  description: Se hur du visar säkerhets- och granskningsrapporter för din miljö, och övervakar dem över tid för att få insikter i användningsmönster. Med Azure Active Directory (Azure AD)-rapporter kan du få insikter i säkerhets- och användningsmönstren i din miljö. Du kan till exempel besvara följande frågor:<ul><li>Hur används programmen eller tjänsterna av användarna?</li><li>Vilka är de potentiella riskerna som påverkar hälsotillståndet för miljön?</li><li>Hur felsöker du problem som hindrar användarna från att uträtta sitt arbete?</li>
 sections:
 - title: Snabbstarter på fem minuter
   items:
