--- a/articles/azure-stack/TOC.yml
+++ b/articles/azure-stack/TOC.yml
@@ -6,6 +6,7 @@ items:
   - name: Vad är Azure Stack?
     href: azure-stack-poc.md
   - name: Viktig information
+    href: azure-stack-servicing-policy.md#update-package-release-cadence
     items:
     - name: 1808 update
       href: azure-stack-update-1808.md
@@ -15,6 +16,8 @@ items:
       href: azure-stack-update-1805.md
     - name: 1804 update
       href: azure-stack-update-1804.md
+    expanded: true
+  expanded: true
 - name: Snabbstarter
   items:
   - name: Utvärdera Azure Stack
@@ -32,6 +35,15 @@ items:
     href: azure-stack-ethereum.md
 - name: Begrepp
   items:
+  - name: Kapacitetsplanering
+    href: capacity-planning.md
+    items:
+    - name: Compute-kapacitetsplanering
+      href: capacity-planning-compute.md
+    - name: Kapacitetsplanering för lagring
+      href: capacity-planning-storage.md
+    - name: Azure Stack Capacity Planner
+      href: capacity-planning-spreadsheet.md
   - name: Datacenter-integrering
     items:
     - name: Överväganden för allmänna Azure Stack-integrering
@@ -371,9 +383,9 @@ items:
     href: http://stackoverflow.com/questions/tagged/azure-stack
   - name: Utbildning och certifiering
     href: https://docs.microsoft.com/azure/azure-stack/azure-stack-train-and-cert
-ms.openlocfilehash: df99e56ff7df96a917005f918f224ca9ae7df4b3
-ms.sourcegitcommit: f10653b10c2ad745f446b54a31664b7d9f9253fe
+ms.openlocfilehash: d6f327a6fa7addaef8ecc21fdc2831ff20e4ba4f
+ms.sourcegitcommit: ce526d13cd826b6f3e2d80558ea2e289d034d48f
 ms.translationtype: MT
 ms.contentlocale: sv-SE
-ms.lasthandoff: 09/18/2018
-ms.locfileid: "46129819"
+ms.lasthandoff: 09/19/2018
+ms.locfileid: "46368196"
