--- a/articles/event-hubs/TOC.yml
+++ b/articles/event-hubs/TOC.yml
@@ -89,6 +89,10 @@ items:
     href: event-hubs-python-get-started-send.md
   - name: Skicka händelser med Python
     href: event-hubs-python-get-started-receive.md
+  - name: Skicka händelser med Node.js
+    href: event-hubs-node-get-started-send.md
+  - name: Ta emot händelser med Node.js
+    href: event-hubs-node-get-started-receive.md
   - name: Event Hubs för Apache Kafka
     items:
     - name: Skapa Apache Kafka-aktiverade Event Hubs
@@ -180,9 +184,9 @@ items:
     href: http://stackoverflow.com/questions/tagged/azure-eventhub
   - name: Videoklipp
     href: https://azure.microsoft.com/documentation/videos/index/?services=event-hubs
-ms.openlocfilehash: 525274c16fbb1320d52a7e96b222021eee841155
-ms.sourcegitcommit: cb61439cf0ae2a3f4b07a98da4df258bfb479845
+ms.openlocfilehash: 4028907b3e6ef50189fb24936348e628a564e1a4
+ms.sourcegitcommit: ce526d13cd826b6f3e2d80558ea2e289d034d48f
 ms.translationtype: HT
 ms.contentlocale: sv-SE
-ms.lasthandoff: 09/05/2018
-ms.locfileid: "43701890"
+ms.lasthandoff: 09/19/2018
+ms.locfileid: "46364847"
