--- a/articles/iot-accelerators/toc.yml
+++ b/articles/iot-accelerators/toc.yml
@@ -25,6 +25,8 @@ items:
     href: iot-accelerators-remote-monitoring-automate.md
   - name: Konfigurera och hantera enheter
     href: iot-accelerators-remote-monitoring-manage.md
+  - name: Utföra en rotorsaksanalys på en avisering
+    href: iot-accelerators-remote-monitoring-root-cause-analysis.md
   - name: Använda aviseringar och åtgärda enhetsproblem
     href: iot-accelerators-remote-monitoring-maintain.md
 - name: Begrepp
@@ -93,6 +95,8 @@ items:
       href: iot-accelerators-integrate-data-lake.md
     - name: Konfigurera rollbaserad åtkomstkontroll
       href: iot-accelerators-remote-monitoring-rbac.md
+    - name: Ge åtkomst till telemetriutforskare
+      href: iot-accelerators-remote-monitoring-rbac-tsi.md
   - name: Fjärrövervakning (tidigare version)
     items:
     - name: Vilka är de förkonfigurerade lösningarna?
@@ -252,9 +256,9 @@ items:
     href: https://stackoverflow.com/questions/tagged/azure-iot-suite
   - name: Utbildningsväg för IoT-lösningsacceleratorer
     href: https://azure.microsoft.com/documentation/learning-paths/iot-suite/
-ms.openlocfilehash: 5612ae6fb91c31afc7305866ea3f99843c692619
-ms.sourcegitcommit: 1b561b77aa080416b094b6f41fce5b6a4721e7d5
+ms.openlocfilehash: 935b9acf2eeaaee73745426eefb5625f470f62b7
+ms.sourcegitcommit: ce526d13cd826b6f3e2d80558ea2e289d034d48f
 ms.translationtype: HT
 ms.contentlocale: sv-SE
-ms.lasthandoff: 09/17/2018
-ms.locfileid: "45732914"
+ms.lasthandoff: 09/19/2018
+ms.locfileid: "46365476"
