--- a/articles/cognitive-services/QnAMaker/index.yml
+++ b/articles/cognitive-services/QnAMaker/index.yml
@@ -1,25 +1,25 @@
 ### YamlMime:YamlDocument
-ms.openlocfilehash: 8de6bb1b1129fc9972466ee2b12b211ef2c4f96a
-ms.sourcegitcommit: f983187566d165bc8540fdec5650edcc51a6350a
+ms.openlocfilehash: 91b59c21af0fa9b7756bc9692b0344e86b9ded33
+ms.sourcegitcommit: 32d218f5bd74f1cd106f4248115985df631d0a8c
 ms.translationtype: HT
 ms.contentlocale: sv-SE
-ms.lasthandoff: 09/13/2018
-ms.locfileid: "45542269"
+ms.lasthandoff: 09/24/2018
+ms.locfileid: "46989180"
 documentType: LandingData
 title: Dokumentation om QnA Maker
 metadata:
   title: Dokumentation om QnA Maker – Microsoft Cognitive Services | Microsoft Docs
   description: Läs mer om QnA Maker och om hur det fungerar.
   services: cognitive-services
-  author: nstulasi
-  manager: cgronlun
+  author: tulasim88
+  manager: cjgronlund
   ms.service: cognitive-services
   ms.component: qna-maker
   ms.tgt_pltfrm: na
   ms.devlang: na
   ms.topic: landing-page
   ms.date: 09/12/2018
-  ms.author: nstulasi
+  ms.author: tulasim
 abstract:
   description: <a href="https://qnamaker.ai">Med QnA Maker</a> kan du driva en tjänst för frågor och svar från halvstrukturerat innehåll som Vanliga frågor och svar-dokument, URL:er och produkthandböcker.
 sections:
