--- a/articles/app-service/index.yml
+++ b/articles/app-service/index.yml
@@ -1,9 +1,15 @@
 ### YamlMime:YamlDocument
+ms.openlocfilehash: 6c8737b353503144094a4e2fb6bc7b5471a377b9
+ms.sourcegitcommit: 32d218f5bd74f1cd106f4248115985df631d0a8c
+ms.translationtype: HT
+ms.contentlocale: sv-SE
+ms.lasthandoff: 09/24/2018
+ms.locfileid: "46989931"
 documentType: LandingData
 title: Dokumentation om Web Apps
 metadata:
   document_id: 6c8db72a-cdb7-8fb7-ed57-ed75afcca4d0
-  title: 'Dokumentation om Azure Web Apps – självstudier, API-referens'
+  title: Dokumentation om Azure Web Apps – självstudier, API-referens
   meta.description: Learn how to use App Service Web Apps to build and host websites and web applications.
   services: app-service
   author: czeumault
@@ -15,135 +21,148 @@ metadata:
   ms.date: 01/23/2017
   ms.author: carolz
 abstract:
-  description: 'Med Azure Web Apps kan du skapa och vara värd för webbappar i valfritt programmeringsspråk utan att behöva hantera infrastrukturen. Azure Web Apps tillhandahåller automatisk skalning och hög tillgänglighet, har stöd för både Windows och Linux och möjliggör automatiska distributioner från GitHub, Azure DevOps eller valfri Git-lagringsplats. Lär dig hur du använder Azure Web Apps med våra snabbstarter, självstudier och exempel.'
+  description: Med Azure Web Apps kan du skapa och vara värd för webbappar i valfritt programmeringsspråk utan att behöva hantera infrastrukturen. Azure Web Apps tillhandahåller automatisk skalning och hög tillgänglighet, har stöd för både Windows och Linux och möjliggör automatiska distributioner från GitHub, Azure DevOps eller valfri Git-lagringsplats. Lär dig hur du använder Azure Web Apps med våra snabbstarter, självstudier och exempel.
   aside:
     image:
-      alt: null
+      alt: 
       height: 110
-      src: 'https://docs.microsoft.com/azure/app-service/media/index/create-a-web-app-with-nodejs-and-azure-app-service.png'
+      src: https://docs.microsoft.com/azure/app-service/media/index/create-a-web-app-with-nodejs-and-azure-app-service.png
       width: 250
-    title: 'Skapa en webbapp med Node.js och Azure App Service. (2:41)'
-    href: 'https://azure.microsoft.com/resources/videos/create-a-web-app-with-nodejs-and-azure-app-service/'
+    title: Skapa en webbapp med Node.js och Azure App Service. (2:41)
+    href: https://azure.microsoft.com/resources/videos/create-a-web-app-with-nodejs-and-azure-app-service/
     width: 250
 sections:
-  - title: Snabbstarter på 5 minuter
+- title: Snabbstarter på 5 minuter
+  items:
+  - type: paragraph
+    text: 'Lär dig hur du distribuerar ditt första program till molnet med Web Apps:'
+  - type: list
+    style: icon48
     items:
-      - type: paragraph
-        text: 'Lär dig hur du distribuerar ditt första program till molnet med Web Apps:'
-      - type: list
-        style: icon48
-        items:
-          - image:
-              src: 'https://docs.microsoft.com/azure/app-service/media/index/logo_net.svg'
-            text: .NET
-            href: 'https://docs.microsoft.com/azure/app-service/app-service-web-get-started-dotnet'
-          - image:
-              src: 'https://docs.microsoft.com/azure/app-service/media/index/logo_nodejs.svg'
-            text: Node.js
-            href: 'https://docs.microsoft.com/azure/app-service/app-service-web-get-started-nodejs'
-          - image:
-              src: 'https://docs.microsoft.com/azure/app-service/media/index/logo_php.svg'
-            text: PHP
-            href: 'https://docs.microsoft.com/azure/app-service/app-service-web-get-started-php'
-          - image:
-              src: 'https://docs.microsoft.com/azure/app-service/media/index/logo_java.svg'
-            text: Java
-            href: 'https://docs.microsoft.com/azure/app-service/app-service-web-get-started-java'
-          - image:
-              src: 'https://docs.microsoft.com/azure/app-service/media/index/logo_python.svg'
-            text: Python (på Linux)
-            href: 'https://docs.microsoft.com/azure/app-service/containers/quickstart-python'
-          - image:
-              src: 'https://docs.microsoft.com/azure/app-service/media/index/logo_html5.svg'
-            text: HTML
-            href: 'https://docs.microsoft.com/azure/app-service/app-service-web-get-started-html'
-          - image:
-              src: 'https://docs.microsoft.com/media/logos/logo_docker.svg'
-            text: Anpassad Windows-container (förhandsversion)
-            href: 'https://docs.microsoft.com/azure/app-service/app-service-web-get-started-windows-container'
-      - type: paragraph
-        text: 'Lär dig hur du distribuerar din kod:'
-      - type: list
-        style: icon48
-        items:
-          - image:
-              src: media/index/zip.svg
-            text: ZIP/WAR
-            href: app-service-deploy-zip.md
-          - image:
-              src: media/index/ftp.svg
-            text: FTP
-            href: app-service-deploy-ftp.md
-          - image:
-              src: media/index/git-icon.svg
-            text: Lokal Git
-            href: app-service-deploy-local-git.md
-          - image:
-              src: 'https://docs.microsoft.com/azure/media/index/logo_vs-team-services.svg'
-            text: Azure DevOps
-            href: 'https://docs.microsoft.com/vsts/build-release/apps/cd/azure/aspnet-core-to-azure-webapp?toc=/vsts/deploy-azure/toc.json&bc=/vsts/deploy-azure/breadcrumb/toc.json'
-          - image:
-              src: media/index/github-octicons.svg
-            text: GitHub
-            href: app-service-continuous-deployment.md
-          - image:
-              src: media/index/bitbucket.svg
-            text: Bitbucket
-            href: app-service-continuous-deployment.md
-          - image:
-              src: media/index/dropbox.svg
-            text: DropBox-synkronisering
-            href: app-service-deploy-content-sync.md
-          - image:
-              src: media/index/onedrive.svg
-            text: OneDrive-synkronisering
-            href: app-service-deploy-content-sync.md
-  - title: Steg för steg-självstudier
+    - image:
+        src: https://docs.microsoft.com/azure/app-service/media/index/logo_net.svg
+      text: .NET
+      href: https://docs.microsoft.com/azure/app-service/app-service-web-get-started-dotnet
+    - image:
+        src: https://docs.microsoft.com/azure/app-service/media/index/logo_nodejs.svg
+      text: Node.js
+      href: https://docs.microsoft.com/azure/app-service/app-service-web-get-started-nodejs
+    - image:
+        src: https://docs.microsoft.com/azure/app-service/media/index/logo_php.svg
+      text: PHP
+      href: https://docs.microsoft.com/azure/app-service/app-service-web-get-started-php
+    - image:
+        src: https://docs.microsoft.com/azure/app-service/media/index/logo_java.svg
+      text: Java
+      href: https://docs.microsoft.com/azure/app-service/app-service-web-get-started-java
+    - image:
+        src: https://docs.microsoft.com/azure/app-service/media/index/logo_python.svg
+      text: Python (på Linux)
+      href: https://docs.microsoft.com/azure/app-service/containers/quickstart-python
+    - image:
+        src: https://docs.microsoft.com/azure/app-service/media/index/logo_html5.svg
+      text: HTML
+      href: https://docs.microsoft.com/azure/app-service/app-service-web-get-started-html
+    - image:
+        src: https://docs.microsoft.com/media/logos/logo_docker.svg
+      text: Anpassad Windows-container (förhandsversion)
+      href: https://docs.microsoft.com/azure/app-service/app-service-web-get-started-windows-container
+  - type: paragraph
+    text: 'Lär dig hur du distribuerar din kod:'
+  - type: list
+    style: icon48
     items:
-      - type: paragraph
-        text: 'Lär dig att distribuera, hantera och övervaka säkra webbappar på Azure'
-      - type: list
-        style: ordered
-        items:
-          - html: Skapa ett program med hjälp av <a href="/azure/app-service/app-service-web-tutorial-dotnet-sqldatabase">.NET med Azure SQL DB</a> eller <a href="/azure/app-service/app-service-web-tutorial-nodejs-mongodb-app">Node.js med MongoDB</a>
-          - html: <a href="/azure/app-service/app-service-web-tutorial-custom-domain">Mappa en befintlig anpassad domän till ditt program</a>
-          - html: <a href="/azure/app-service/app-service-web-tutorial-custom-SSL">Bind ett befintligt SSL-certifikat till ditt program</a>
-          - html: <a href="/azure/app-service/app-service-web-tutorial-content-delivery-network">Lägga till ett CDN till ditt program</a>
-  - title: Kostnadsfri videoutbildning för Pluralsight
+    - image:
+        src: media/index/zip.svg
+      text: ZIP/WAR
+      href: app-service-deploy-zip.md
+    - image:
+        src: media/index/ftp.svg
+      text: FTP
+      href: app-service-deploy-ftp.md
+    - image:
+        src: media/index/git-icon.svg
+      text: Lokal Git
+      href: app-service-deploy-local-git.md
+    - image:
+        src: https://docs.microsoft.com/azure/media/index/logo_vs-team-services.svg
+      text: Azure DevOps
+      href: https://docs.microsoft.com/vsts/build-release/apps/cd/azure/aspnet-core-to-azure-webapp?toc=/vsts/deploy-azure/toc.json&bc=/vsts/deploy-azure/breadcrumb/toc.json
+    - image:
+        src: media/index/github-octicons.svg
+      text: GitHub
+      href: app-service-continuous-deployment.md
+    - image:
+        src: media/index/bitbucket.svg
+      text: Bitbucket
+      href: app-service-continuous-deployment.md
+    - image:
+        src: media/index/dropbox.svg
+      text: DropBox-synkronisering
+      href: app-service-deploy-content-sync.md
+    - image:
+        src: media/index/onedrive.svg
+      text: OneDrive-synkronisering
+      href: app-service-deploy-content-sync.md
+- title: Steg för steg-självstudier
+  items:
+  - type: paragraph
+    text: Lär dig att distribuera, hantera och övervaka säkra webbappar på Azure
+  - type: list
+    style: ordered
     items:
-      - type: list
-        style: cards
-        className: cardsFTitle
-        items:
-          - title: Utveckla med .NET
-            href: 'https://www.pluralsight.com/courses/developing-dotnet-microsoft-azure-getting-started?twoid=d6abac77-7dcc-4d33-9e03-f85e78989f02'
-            image:
-              src: 'https://docs.microsoft.com/media/logos/logo_pluralsight.svg'
-              href: 'https://www.pluralsight.com/courses/developing-dotnet-microsoft-azure-getting-started?twoid=d6abac77-7dcc-4d33-9e03-f85e78989f02'
-          - title: Utveckla med Node.js
-            href: 'https://www.pluralsight.com/courses/developing-nodejs-microsoft-azure-getting-started?twoid=d6abac77-7dcc-4d33-9e03-f85e78989f02'
-            image:
-              src: 'https://docs.microsoft.com/media/logos/logo_pluralsight.svg'
-              href: 'https://www.pluralsight.com/courses/developing-nodejs-microsoft-azure-getting-started?twoid=d6abac77-7dcc-4d33-9e03-f85e78989f02'
-  - title: Exempel
+    - html: Skapa ett program med hjälp av <a href="/azure/app-service/app-service-web-tutorial-dotnet-sqldatabase">.NET med Azure SQL DB</a> eller <a href="/azure/app-service/app-service-web-tutorial-nodejs-mongodb-app">Node.js med MongoDB</a>
+    - html: <a href="/azure/app-service/app-service-web-tutorial-custom-domain">Mappa en befintlig anpassad domän till ditt program</a>
+    - html: <a href="/azure/app-service/app-service-web-tutorial-custom-SSL">Bind ett befintligt SSL-certifikat till ditt program</a>
+    - html: <a href="/azure/app-service/app-service-web-tutorial-content-delivery-network">Lägga till ett CDN till ditt program</a>
+- title: Utveckla din kompetens med Microsoft Learn
+  items:
+  - type: list
+    style: cards
+    className: cardsFTitle
     items:
-      - type: paragraph
-        text: Hitta skript för att hantera vanliga uppgifter.
-      - type: list
-        style: unordered
-        className: spaced noBullet
-        items:
-          - html: <a href="/powershell/azureps-cmdlets-docs">Azure PowerShell</a>
-          - html: <a href="/cli/azure/appservice">Azure CLI</a>
-  - title: Referens
+    - title: Var värd för ett webbprogram med Azure App Service
+      href: /learn/modules/host-a-web-app-with-azure-app-service/
+      image:
+        src: /learn/achievements/host-a-web-app-with-azure-app-service.svg
+        href: /learn/modules/host-a-web-app-with-azure-app-service/
+  - type: paragraph
+    text: <a href="/learn/browse/">Mer interaktiv inlärning...</a>
+- title: Kostnadsfri videoutbildning för Pluralsight
+  items:
+  - type: list
+    style: cards
+    className: cardsFTitle
     items:
-      - type: list
-        style: cards
-        className: cardsD
-        items:
-          - title: Kommandorad
-            html: <p><a href="/powershell/azureps-cmdlets-docs">Azure PowerShell</a></p><p><a href="/cli/azure/appservice">Azure CLI</a></p>
-          - title: Språk
-            html: <p><a href="/dotnet/api">.NET</a></p><p><a href="/java/api/">Java</a></p>
-          - title: REST
-            html: <p><a href="/rest/api/appservice">REST API-referens</a></p>
+    - title: Utveckla med .NET
+      href: https://www.pluralsight.com/courses/developing-dotnet-microsoft-azure-getting-started?twoid=d6abac77-7dcc-4d33-9e03-f85e78989f02
+      image:
+        src: https://docs.microsoft.com/media/logos/logo_pluralsight.svg
+        href: https://www.pluralsight.com/courses/developing-dotnet-microsoft-azure-getting-started?twoid=d6abac77-7dcc-4d33-9e03-f85e78989f02
+    - title: Utveckla med Node.js
+      href: https://www.pluralsight.com/courses/developing-nodejs-microsoft-azure-getting-started?twoid=d6abac77-7dcc-4d33-9e03-f85e78989f02
+      image:
+        src: https://docs.microsoft.com/media/logos/logo_pluralsight.svg
+        href: https://www.pluralsight.com/courses/developing-nodejs-microsoft-azure-getting-started?twoid=d6abac77-7dcc-4d33-9e03-f85e78989f02
+- title: Exempel
+  items:
+  - type: paragraph
+    text: Hitta skript för att hantera vanliga uppgifter.
+  - type: list
+    style: unordered
+    className: spaced noBullet
+    items:
+    - html: <a href="/powershell/azureps-cmdlets-docs">Azure PowerShell</a>
+    - html: <a href="/cli/azure/appservice">Azure CLI</a>
+- title: Referens
+  items:
+  - type: list
+    style: cards
+    className: cardsD
+    items:
+    - title: Kommandorad
+      html: <p><a href="/powershell/azureps-cmdlets-docs">Azure PowerShell</a></p><p><a href="/cli/azure/appservice">Azure CLI</a></p>
+    - title: Språk
+      html: <p><a href="/dotnet/api">.NET</a></p><p><a href="/java/api/">Java</a></p>
+    - title: REST
+      html: <p><a href="/rest/api/appservice">REST API-referens</a></p>
