--- a/articles/azure-signalr/index.yml
+++ b/articles/azure-signalr/index.yml
@@ -1,10 +1,10 @@
 ### YamlMime:YamlDocument
-ms.openlocfilehash: 338de80ef721bb8232a969c02522fb7baa8ee0ca
-ms.sourcegitcommit: 63613e4c7edf1b1875a2974a29ab2a8ce5d90e3b
+ms.openlocfilehash: b4c33753452921e12056e702c68cd0f1a8741f41
+ms.sourcegitcommit: 32d218f5bd74f1cd106f4248115985df631d0a8c
 ms.translationtype: HT
 ms.contentlocale: sv-SE
-ms.lasthandoff: 08/29/2018
-ms.locfileid: "43184781"
+ms.lasthandoff: 09/24/2018
+ms.locfileid: "46998686"
 documentType: LandingData
 title: Dokumentation för Azure SignalR Service
 metadata:
@@ -18,10 +18,10 @@ metadata:
   ms.tgt_pltfrm: na
   ms.devlang: na
   ms.topic: landing-page
-  ms.date: 04/17/2018
+  ms.date: 09/12/2018
   ms.author: wesmc
 abstract:
-  description: Azure SignalR Service är en Azure-hanterad tjänst som hjälper utvecklare att enkelt skapa webbappar med realtidsfunktioner. Den här tjänsten bygger på ASP.NET Core, som är ett bibliotek med öppen källkod som förenklar arbetet med att lägga till webbfunktioner i realtid för program.
+  description: Azure SignalR Service är en Azure-hanterad tjänst som hjälper utvecklare att enkelt skapa webbappar med realtidsfunktioner.
 sections:
 - title: Snabbstarter på 5 minuter
   items:
@@ -31,39 +31,53 @@ sections:
     style: icon48
     items:
     - image:
-        src: http://docs.microsoft.com/en-us/media/logos/logo_NET.svg
-      text: .NET
+        src: http://docs.microsoft.com/en-us/media/logos/logo_NETcore.svg
+      text: ASP.NET Core
       href: /azure/azure-signalr/signalr-quickstart-dotnet-core
+    - image:
+        src: https://docs.microsoft.com/en-us/azure/media/index/azurefunctions.svg
+      text: JavaScript
+      href: /azure/azure-signalr/signalr-quickstart-azure-functions-javascript
+    - image:
+        src: https://docs.microsoft.com/en-us/azure/media/index/azurefunctions.svg
+      text: C#
+      href: /azure/azure-signalr/signalr-quickstart-azure-functions-csharp
+    - image:
+        src: https://docs.microsoft.com/en-us/media/logos/logo_REST.svg
+      text: C#
+      href: /azure/azure-signalr/signalr-quickstart-rest-api
 - title: Steg för steg-självstudier
   items:
   - type: paragraph
     text: Lär dig att skapa Azure SignalR Service-program
   - type: list
-    style: ordered
+    style: unordered
     items:
-    - html: <a href="/azure/azure-signalr/signalr-authenticate-oauth">Azure SignalR Service-autentisering</a>
-- title: Kostnadsfri videoutbildning för Pluralsight
-  items:
-  - type: list
-    style: cards
-    className: cardsFTitle
-    items:
-    - title: Utveckla med .NET
-      href: https://www.pluralsight.com/courses/developing-dotnet-microsoft-azure-getting-started?twoid=d6abac77-7dcc-4d33-9e03-f85e78989f02
-      image:
-        src: https://docs.microsoft.com/media/logos/logo_pluralsight.svg
-        href: https://www.pluralsight.com/courses/developing-dotnet-microsoft-azure-getting-started?twoid=d6abac77-7dcc-4d33-9e03-f85e78989f02
-    - title: Azure-lösningsarkitekt
-      href: https://go.microsoft.com/fwlink/?linkid=2012824
-      image:
-        src: https://docs.microsoft.com/media/logos/logo_pluralsight.svg
-        href: https://go.microsoft.com/fwlink/?linkid=2012824
-- title: Exempel
+    - html: <a href="/azure/azure-signalr/signalr-authenticate-oauth">Integrera Azure SignalR Service med ASP.NET Core-identitet</a>
+    - html: <a href="/azure/azure-signalr/signalr-authenticate-azure-functions">Skapa en app utan server i realtid med autentisering</a>
+- title: Referens
   items:
   - type: paragraph
-    text: Hitta skript för vanliga hanteringsuppgifter.
+    text: Program Azure SignalR
+  - type: list
+    style: unordered
+    items:
+    - html: <a href="https://docs.microsoft.com/aspnet/core">ASP.NET Core SDK</a>
+    - html: <a href="https://github.com/Azure/azure-functions-signalrservice-extension">Bindningar för Azure Functions</a>
+    - html: <a href="https://github.com/Azure/azure-signalr/blob/dev/docs/rest-api.md">REST API</a>
+  - type: paragraph
+    text: Ansluta till Azure SignalR med SDK:er för klienter
+  - type: list
+    style: unordered
+    items:
+    - html: <a href="https://docs.microsoft.com/aspnet/core/signalr/javascript-client">JavaScript</a>
+    - html: <a href="https://docs.microsoft.com/aspnet/core/signalr/dotnet-client">.NET-standard</a>
+    - html: <a href="https://github.com/aspnet/SignalR/tree/release/2.2/clients/java/signalr">Java</a>
+- title: Exempel
+  items:
   - type: list
     style: unordered
     className: spaced noBullet
     items:
+    - html: <a href="https://github.com/aspnet/AzureSignalR-samples">Azure SignalR Code-exempel</a>
     - html: <a href="/azure/azure-signalr/signalr-cli-samples">Azure CLI</a>
