--- a/articles/cognitive-services/Bing-Custom-Search/toc.yml
+++ b/articles/cognitive-services/Bing-Custom-Search/toc.yml
@@ -1,84 +1,93 @@
+items:
 - name: Dokumentation för Anpassad sökning i Bing
   href: index.yml
 - name: Översikt
-  expanded: true
   items:
-    - name: Vad är Anpassad sökning i Bing?
-      href: overview.md
+  - name: Vad är Anpassad sökning i Bing?
+    href: overview.md
+  expanded: true
 - name: Snabbstarter för REST API
-  expanded: true
   items:
-    - name: Skapa den första instansen
-      href: quick-start.md
-    - name: 'C#'
-      href: call-endpoint-csharp.md
-    - name: Java
-      href: call-endpoint-java.md
-    - name: Node.js
-      href: call-endpoint-nodejs.md
-    - name: Python
-      href: call-endpoint-python.md
+  - name: Skapa den första instansen
+    href: quick-start.md
+  - name: C#
+    href: call-endpoint-csharp.md
+  - name: Java
+    href: call-endpoint-java.md
+  - name: Node.js
+    href: call-endpoint-nodejs.md
+  - name: Python
+    href: call-endpoint-python.md
+  expanded: true
 - name: Snabbstarter för SDK
   items:
-    - name: Översikt över SDK-exempel
-      href: sdk.md
-    - name: 'Snabbstart för SDK för anpassad sökning i C#'
-      href: custom-search-sdk-quickstart.md
+  - name: Snabbstart för SDK i C#
+    href: sdk-csharp-quick-start.md
 - name: Självstudier
   items:
-    - name: Skapa en webbsida för anpassad sökning
-      href: ./tutorials/custom-search-web-page.md
+  - name: Skapa en webbsida för anpassad sökning
+    href: ./tutorials/custom-search-web-page.md
 - name: Exempel
   items:
-    - name: Kodexempel
-      href: 'https://azure.microsoft.com/resources/samples/?sort=0&service=cognitive-services&term=Bing+Custom+Search'
+  - name: Kodexempel
+    href: https://azure.microsoft.com/resources/samples/?sort=0&service=cognitive-services&term=Bing+Custom+Search
 - name: Instruktionsguider
   items:
-    - name: Konfigurera anpassad sökupplevelse
-      href: define-your-custom-view.md
-    - name: Anropa anpassad sökning
-      href: search-your-custom-view.md
-    - name: Konfigurera värdbaserad UI-upplevelse
-      href: hosted-ui.md
-    - name: Dela anpassad sökning
-      href: share-your-custom-search.md
-    - name: Konfigurera anpassad upplevelse för automatiska förslag
-      href: define-custom-suggestions.md
-    - name: Få anpassade förslag
-      href: get-custom-suggestions.md
-    - name: Hantera träffmarkering
-      href: hit-highlighting.md
-    - name: Webbsidor för sida
-      href: page-webpages.md
+  - name: Konfigurera anpassad sökupplevelse
+    href: define-your-custom-view.md
+  - name: Anropa anpassad sökning
+    href: search-your-custom-view.md
+  - name: Konfigurera värdbaserad UI-upplevelse
+    href: hosted-ui.md
+  - name: Dela anpassad sökning
+    href: share-your-custom-search.md
+  - name: Hämta bilder från din instans
+    href: get-images-from-instance.md
+  - name: Hämta filmer från din instans
+    href: get-videos-from-instance.md
+  - name: Konfigurera anpassad upplevelse för automatiska förslag
+    href: define-custom-suggestions.md
+  - name: Hantera träffmarkering
+    href: hit-highlighting.md
+  - name: Webbsidor för sida
+    href: page-webpages.md
 - name: Referens
   items:
-    - name: API-referens för anpassade automatiska förslag i Bing
-      href: 'https://docs.microsoft.com/rest/api/cognitiveservices/bing-custom-autosuggest-api-v7-reference'
-    - name: API-referens för anpassad bildsökning i Bing
-      href: 'https://docs.microsoft.com/rest/api/cognitiveservices/bing-custom-images-api-v7-reference'
-    - name: API-referens för anpassad Bing-sökning
-      href: 'https://docs.microsoft.com/rest/api/cognitiveservices/bing-custom-search-api-v7-reference'
-    - name: 'Användnings- och visningskrav för API:er för Bing-sökresultat'
-      href: use-and-display-requirements.md
+  - name: API-referens för anpassade automatiska förslag i Bing
+    href: https://docs.microsoft.com/rest/api/cognitiveservices/bing-custom-autosuggest-api-v7-reference
+  - name: API-referens för anpassad bildsökning i Bing
+    href: https://docs.microsoft.com/rest/api/cognitiveservices/bing-custom-images-api-v7-reference
+  - name: API-referens för anpassad Bing-sökning
+    href: https://docs.microsoft.com/rest/api/cognitiveservices/bing-custom-search-api-v7-reference
+  - name: API-referens för anpassad Bing-videosökning
+    href: https://docs.microsoft.com/rest/api/cognitiveservices/bing-custom-videos-api-v7-reference
+  - name: Användnings- och visningskrav för API:er för Bing-sökresultat
+    href: use-and-display-requirements.md
 - name: Resurser
   items:
-    - name: Prissättning
-      href: 'https://azure.microsoft.com/pricing/details/cognitive-services/bing-custom-search/'
-    - name: UserVoice
-      href: 'https://cognitive.uservoice.com/forums/598147-bing-custom-search-api'
-    - name: Stack Overflow
-      href: 'https://stackoverflow.com/search?q=bing+custom+search'
-    - name: Regional tillgänglighet
-      href: 'https://azure.microsoft.com/global-infrastructure/services/'
-    - name: Azure-översikt
-      href: 'https://azure.microsoft.com/roadmap/'
-    - name: Kunskapsbas
-      href: 'https://cognitive.uservoice.com/knowledgebase/topics/127875-bing-search-web-image-video-news-autosuggest'
-    - name: Hämta API-nyckel
-      href: 'https://azure.microsoft.com/try/cognitive-services/?api=bing-custom-search-api'
-    - name: Prova!
-      href: 'https://aka.ms/bingcustomsearchtryit'
-    - name: Slutpunkt för Anpassad sökning i Bing
-      href: endpoint-custom.md
-    - name: Länder och marknader som stöds
-      href: supported-countries-markets.md
+  - name: Prissättning
+    href: https://azure.microsoft.com/pricing/details/cognitive-services/bing-custom-search/
+  - name: UserVoice
+    href: https://cognitive.uservoice.com/forums/598147-bing-custom-search-api
+  - name: Stack Overflow
+    href: https://stackoverflow.com/search?q=bing+custom+search
+  - name: Regional tillgänglighet
+    href: https://azure.microsoft.com/global-infrastructure/services/
+  - name: Azure-översikt
+    href: https://azure.microsoft.com/roadmap/
+  - name: Kunskapsbas
+    href: https://cognitive.uservoice.com/knowledgebase/topics/127875-bing-search-web-image-video-news-autosuggest
+  - name: Hämta API-nyckel
+    href: https://azure.microsoft.com/try/cognitive-services/?api=bing-custom-search-api
+  - name: Prova!
+    href: https://aka.ms/bingcustomsearchtryit
+  - name: Slutpunkt för Anpassad sökning i Bing
+    href: endpoint-custom.md
+  - name: Länder och marknader som stöds
+    href: supported-countries-markets.md
+ms.openlocfilehash: 2617e733aaae4a78d064e734ab440a03954930c9
+ms.sourcegitcommit: 32d218f5bd74f1cd106f4248115985df631d0a8c
+ms.translationtype: HT
+ms.contentlocale: sv-SE
+ms.lasthandoff: 09/24/2018
+ms.locfileid: "46999673"
