--- a/articles/cognitive-services/Bing-Image-Search/index.yml
+++ b/articles/cognitive-services/Bing-Image-Search/index.yml
@@ -1,28 +1,49 @@
 ### YamlMime:YamlDocument
-ms.openlocfilehash: 94663fc33c172497c0ff1b129dd557eda0f4344a
-ms.sourcegitcommit: e8f443ac09eaa6ef1d56a60cd6ac7d351d9271b9
+ms.openlocfilehash: cb9fe97bf1b71731f6d4a09b22cf2fb4d6de47a1
+ms.sourcegitcommit: 32d218f5bd74f1cd106f4248115985df631d0a8c
 ms.translationtype: HT
 ms.contentlocale: sv-SE
-ms.lasthandoff: 09/12/2018
-ms.locfileid: "35624520"
+ms.lasthandoff: 09/24/2018
+ms.locfileid: "46965389"
 documentType: LandingData
-title: Dokumentation om bildsökning i Bing
+title: Dokumentation om Bing-bildsöknings-API
 metadata:
   document_id: ce69fd12-adf8-11e7-abc4-cec278b6b50a
-  title: Dokumentation om bildsökning i Bing – självstudier, snabbstarter, API-referenser | Microsoft Docs
+  title: Dokumentation om API för bildsökning i Bing – självstudier, snabbstarter, API-referenser | Microsoft Docs
   description: Lär dig att använda API för bildsökning i Bing för att hämta resultat från webben som är relevanta för användarfrågor. Självstudier visar hur du skapar appar som använder tjänsten.
   services: cognitive-services
-  author: v-jerkin
-  manager: carolz
+  author: nitinme
+  manager: cgronlun
   ms.service: bing-image-search
   ms.tgt_pltfrm: na
   ms.devlang: na
   ms.topic: landing-page
-  ms.date: 10/10/2017
-  ms.author: v-jerkin
+  ms.date: 9/24/2018
+  ms.author: nitinme
 abstract:
   description: API för bildsökning i Bing ger funktioner som liknar Bing.com/images genom att returnera sökresultat som Bing bedömer som relevanta för användarens fråga.
 sections:
+- items:
+  - type: list
+    style: cards
+    className: cardsM
+    columns: 3
+    items:
+    - href: /azure/cognitive-services/bing-image-search/overview
+      html: <p>Läs mer om API för bildsökning i Bing</p>
+      image:
+        src: ../media/index/i_overview.svg
+      title: Vad är bildsökning i Bing?
+    - href: /azure/cognitive-services/bing-image-search/concepts/bing-image-search-sending-queries
+      html: <p>Lär dig att skicka sökfrågor för bilder till Bing</p>
+      image:
+        src: ../media/index/i_guidelines.svg
+      title: Bildsökfrågor
+    - href: /azure/cognitive-services/bing-image-search/concepts/bing-image-search-get-images
+      html: <p>Förstå bildsökningssvaret</p>
+      image:
+        src: ../media/index/i_guidelines.svg
+      title: Svar på bildsökning
 - title: Snabbstarter på 5 minuter
   items:
   - type: paragraph
@@ -61,15 +82,27 @@ sections:
   - type: list
     style: unordered
     items:
-    - html: <a href="tutorial-bing-image-search-single-page-app">Enkelsidig webbapp</a> &#124; <a href="tutorial-bing-image-search-single-page-app-source">Källkod</a>
-    - html: <a href="tutorial-image-post">Bilduppladdning i Bing för information</a> &#124; <a href="tutorial-image-post-source">Källkod</a>
+    - html: <a href="tutorial-bing-image-search-single-page-app">Enkelsidig webbapp</a>
+    - html: <a href="tutorial-image-post">Bilduppladdning i Bing för information</a>
+- title: Exempel
+  items:
+  - type: paragraph
+    text: 'Hitta exempel för API för bildsökning i Bing:'
+  - type: list
+    style: unordered
+    items:
+    - html: <a href="https://azure.microsoft.com/resources/samples/?sort=0&service=cognitive-services&term=Bing+Image+Search">Kodexempel</a>
 - title: Referens
   items:
   - type: list
     style: cards
     className: cardsD
     items:
-    - title: API:er
+    - title: REST
       html: <p><a href="https://docs.microsoft.com/rest/api/cognitiveservices/bing-images-api-v7-reference">API för bildsökning i Bing v7</a></p><p><a href="https://docs.microsoft.com/rest/api/cognitiveservices/bing-images-api-v5-reference/">API för bildsökning i Bing v5</p>
     - title: SDK:er
       html: <p><a href="sdk.md">Bing-sökning SDK</a></p>
+    - title: PowerShell
+      html: <p><a href="https://docs.microsoft.com/powershell/module/azurerm.cognitiveservices/?view=azurermps-4.4.1#cognitive_services">Azure PowerShell</a></p>
+    - title: CLI
+      html: <p><a href="https://docs.microsoft.com/cli/azure/cognitiveservices?view=azure-cli-latest#az_cognitiveservices_list">Azure CLI</a></p>
