--- a/articles/cognitive-services/Bing-Web-Search/index.yml
+++ b/articles/cognitive-services/Bing-Web-Search/index.yml
@@ -1,28 +1,49 @@
 ### YamlMime:YamlDocument
-ms.openlocfilehash: 9c9c5671e835e3402fe4dfbf45b295256009caa6
-ms.sourcegitcommit: 63613e4c7edf1b1875a2974a29ab2a8ce5d90e3b
+ms.openlocfilehash: 7eb8996e786d7ee97569c84d70b808cc4210c947
+ms.sourcegitcommit: 32d218f5bd74f1cd106f4248115985df631d0a8c
 ms.translationtype: HT
 ms.contentlocale: sv-SE
-ms.lasthandoff: 08/29/2018
-ms.locfileid: "43185287"
+ms.lasthandoff: 09/24/2018
+ms.locfileid: "46987315"
 documentType: LandingData
-title: Dokumentation om Bing-webbsökning
+title: Dokumentation om API för Bing-webbsökning
 metadata:
   document_id: 6111ada8-aec2-11e7-abc4-cec278b6b50a
-  title: Dokumentation om Bing-webbsökning – Självstudier, snabbstarter, API-referenser | Microsoft Docs
+  title: Dokumentation om API för Bing-webbsökning – Självstudier, snabbstarter, API-referenser | Microsoft Docs
   description: Lär dig att använda API för webbsökning i Bing för att hämta resultat från webben som är relevanta för användarfrågor. Självstudier visar hur du skapar appar som använder tjänsten.
   services: cognitive-services
-  author: v-jerkin
+  author: nitinme
   manager: cgronlun
   ms.service: bing-web-search
   ms.tgt_pltfrm: na
   ms.devlang: na
   ms.topic: landing-page
-  ms.date: 10/10/2017
-  ms.author: v-jerkin
+  ms.date: 9/24/2018
+  ms.author: nitinme
 abstract:
   description: API för webbsökning i Bing ger funktioner som liknar Bing genom att returnera sökresultat som Bing avgjort är relevanta för användarens fråga. Resultaten omfattar webbsidor och kan även omfatta bilder, videor med mera.
 sections:
+- items:
+  - type: list
+    style: cards
+    className: cardsM
+    columns: 3
+    items:
+    - href: /azure/cognitive-services/bing-web-search/overview
+      html: <p>Läs mer om API för webbsökning i Bing</p>
+      image:
+        src: ../media/index/i_overview.svg
+      title: Vad är webbsökning i Bing?
+    - href: /azure/cognitive-services/bing-web-search/search-responses
+      html: <p>Förstå svarstexten av en webbsökning med Bing-API</p>
+      image:
+        src: ../media/index/i_guidelines.svg
+      title: Söksvar
+    - href: /azure/cognitive-services/bing-web-search/autosuggest-bing-search-terms
+      html: <p>Lär dig hur automatiska förslag fungerar för din sökfråga</p>
+      image:
+        src: ../media/index/i_guidelines.svg
+      title: Automatiska förslag för Bing-frågor
 - title: Snabbstarter på 5 minuter
   items:
   - type: paragraph
@@ -65,15 +86,27 @@ sections:
   - type: list
     style: unordered
     items:
-    - html: <a href="tutorial-bing-web-search-single-page-app">Enkelsidig webbapp</a> &#124; <a href="tutorial-bing-web-search-single-page-app-source">Källkod</a>
-    - html: <a href="computer-vision-web-search-tutorial.md">Mobilapp för visuell sökning</a>
+    - html: <a href="tutorial-bing-web-search-single-page-app">Enkelsidig webbapp</a>
+- title: Exempel
+  items:
+  - type: paragraph
+    text: 'Hitta exempel på API för webbsökning i Bing:'
+  - type: list
+    style: unordered
+    items:
+    - html: <a href="https://github.com/Azure-Samples/cognitive-services-REST-api-samples">REST-exempel</a>
+    - html: <a href="sdk-samples.md">SDK-exempel</a>
 - title: Referens
   items:
   - type: list
     style: cards
     className: cardsD
     items:
-    - title: API:er
+    - title: REST
       html: <p><a href="https://docs.microsoft.com/rest/api/cognitiveservices/bing-web-api-v7-reference">API för webbsökning i Bing v7</a></p><p><a href="https://docs.microsoft.com/rest/api/cognitiveservices/bing-web-api-v5-reference/">API för webbsökning i Bing v5</a></p>
     - title: SDK:er
-      html: <p><a href="sdk-samples.md">SDK-exempel för webbsökning i Bing</a></p>
+      html: <p><a href="sdk-samples.md">SDK-referens och exempel</a></p>
+    - title: PowerShell
+      html: <p><a href="https://docs.microsoft.com/powershell/module/azurerm.cognitiveservices/?view=azurermps-4.4.1#cognitive_services">Azure PowerShell</a></p>
+    - title: CLI
+      html: <p><a href="https://docs.microsoft.com/cli/azure/cognitiveservices?view=azure-cli-latest#az_cognitiveservices_list">Azure CLI</a></p>
