--- a/articles/cognitive-services/Computer-vision/index.yml
+++ b/articles/cognitive-services/Computer-vision/index.yml
@@ -1,28 +1,58 @@
 ### YamlMime:YamlDocument
+ms.openlocfilehash: da70af8eb2239fb9246071605aa5323e2e9e041e
+ms.sourcegitcommit: 32d218f5bd74f1cd106f4248115985df631d0a8c
+ms.translationtype: HT
+ms.contentlocale: sv-SE
+ms.lasthandoff: 09/24/2018
+ms.locfileid: "46958449"
 documentType: LandingData
-title: Dokumentation om visuellt innehåll
+title: Dokumentation om visuellt API-innehåll
 metadata:
-  title: Dokumentation om visuellt innehåll – snabbstarter, självstudier, API-referens – Azure Cognitive Services | Microsoft Docs
+  title: Dokumentation om visuellt API-innehåll – snabbstarter, självstudier, API-referens – Azure Cognitive Services | Microsoft Docs
   description: Lär dig hur du använder visuellt innehåll för att bearbeta bilder och returnera information. Självstudier visar hur du skapar appar som använder API:et.
   services: cognitive-services
-  author: noellelacharite
-  manager: nolachar
+  author: nitinme
+  manager: cgronlun
   ms.service: cognitive-services
   ms.component: computer-vision
   ms.tgt_pltfrm: na
   ms.devlang: na
   ms.topic: landing-page
-  ms.date: 06/22/2018
-  ms.author: nolachar
-  ms.openlocfilehash: 7a68ff1e0cc80c99ec94cfe6f0480408afa92431
-  ms.sourcegitcommit: 4597964eba08b7e0584d2b275cc33a370c25e027
-  ms.translationtype: HT
-  ms.contentlocale: sv-SE
-  ms.lasthandoff: 07/02/2018
-  ms.locfileid: "37340720"
+  ms.date: 09/24/2018
+  ms.author: nitinme
 abstract:
   description: Det molnbaserade API:et för visuellt innehåll ger utvecklare åtkomst till avancerade algoritmer för bearbetning av bilder och returnering av information. Genom att ladda upp en bild eller ange en bilds webbadress kan Microsofts algoritmer för visuellt innehåll analysera visuellt innehåll på olika sätt beroende på indata och användarens val. Lär dig hur du analyserar visuellt innehåll på olika sätt med snabbstarter, självstudier och exempel.
+  aside:
+    image:
+      alt: 
+      height: 110
+      src: ../media/index/computer-vision-landing-page-video.png
+      width: 250
+    title: Integrera intelligens enkelt i dina appar med Vision API:er (05:41)
+    href: https://azure.microsoft.com/resources/videos/connect-2017-microsoft-cognitive-services-put-intelligence-into-your-business-apps/
+    width: 250
 sections:
+- items:
+  - type: list
+    style: cards
+    className: cardsM
+    columns: 3
+    items:
+    - href: /azure/cognitive-services/computer-vision/home
+      html: <p>Lär dig om API:et för visuellt innehåll</p>
+      image:
+        src: ../media/index/i_overview.svg
+      title: Vad är visuellt innehåll?
+    - href: /azure/cognitive-services/computer-vision/vision-api-how-to-topics/howtosubscribe
+      html: <p>Lär dig mer om att hämta prenumerationsnycklar för API för visuellt innehåll.</p>
+      image:
+        src: ../media/index/i_tasks.svg
+      title: Prenumerationsnycklar för API för visuellt innehåll
+    - href: /azure/cognitive-services/computer-vision/vision-api-how-to-topics/howtocallvisionapi
+      html: <p>Lär dig grunderna om anrop med ett API för visuellt innehåll.</p>
+      image:
+        src: ../media/index/i_tasks.svg
+      title: Anropa API:et för visuellt innehåll
 - title: Snabbstarter på 5 minuter
   items:
   - type: paragraph
@@ -50,6 +80,14 @@ sections:
         src: media/index/logo_go.svg
       text: Go
       href: QuickStarts/go-analyze
+- title: Steg för steg-självstudier
+  items:
+  - type: paragraph
+    text: 'Lär dig utveckla program med hjälp av visuellt innehåll:'
+  - type: list
+    style: unordered
+    items:
+    - html: <a href="Tutorials/CSharpTutorial.md">Skapa en app för visuellt innehåll med C#</a>
 - title: Referens
   items:
   - type: list
@@ -60,3 +98,7 @@ sections:
       html: <p><a href="https://westus.dev.cognitive.microsoft.com/docs/services/5adf991815e1060e6355ad44">API v2.0 för visuellt innehåll</a></p> <p><a href="https://westus.dev.cognitive.microsoft.com/docs/services/56f91f2d778daf23d8ec6739">API v1.0 för visuellt innehåll</a></p>
     - title: SDK:er
       html: <p><a href="https://github.com/Microsoft/Cognitive-vision-windows">Windows</a></p> <p><a href="https://docs.microsoft.com/javascript/api/overview/azure/cognitive-services?view=azure-node-latest#vision-modules">Node.js</a></p> <p><a href="https://docs.microsoft.com/python/api/overview/azure/cognitive-services?view=azure-python#vision-modules">Python</a></p> <p><a href="https://github.com/Azure/azure-sdk-for-go/tree/master/services/cognitiveservices/v1.0/computervision">Go</a></p> <p><a href="https://github.com/Microsoft/Cognitive-vision-android">Android</a></p> <p><a href="https://github.com/DanilaVladi/Microsoft-Cognitive-Services-Swift-SDK">Swift</a></p>
+    - title: PowerShell
+      html: <p><a href="https://docs.microsoft.com/powershell/module/azurerm.cognitiveservices/?view=azurermps-4.4.1#cognitive_services">Azure PowerShell</a></p>
+    - title: CLI
+      html: <p><a href="https://docs.microsoft.com/cli/azure/cognitiveservices?view=azure-cli-latest#az_cognitiveservices_list">Azure CLI</a></p>
