--- a/articles/cognitive-services/Computer-vision/toc.yml
+++ b/articles/cognitive-services/Computer-vision/toc.yml
@@ -1,5 +1,5 @@
 items:
-- name: Dokumentation om visuellt innehåll
+- name: Dokumentation om visuellt API-innehåll
   href: index.yml
 - name: Översikt
   items:
@@ -186,9 +186,9 @@ items:
     href: https://azure.microsoft.com/global-infrastructure/services/
   - name: Kategoritaxonomi
     href: Category-Taxonomy.md
-ms.openlocfilehash: 1acfafa076ec154238258ebbfb3a56172fdbffe2
-ms.sourcegitcommit: cf606b01726df2c9c1789d851de326c873f4209a
+ms.openlocfilehash: 740c9349fc4c26e4f8163b888fa437f00010b697
+ms.sourcegitcommit: 32d218f5bd74f1cd106f4248115985df631d0a8c
 ms.translationtype: HT
 ms.contentlocale: sv-SE
-ms.lasthandoff: 09/19/2018
-ms.locfileid: "46296540"
+ms.lasthandoff: 09/24/2018
+ms.locfileid: "46978020"
