--- a/articles/cognitive-services/LUIS/index.yml
+++ b/articles/cognitive-services/LUIS/index.yml
@@ -1,27 +1,57 @@
 ### YamlMime:YamlDocument
+ms.openlocfilehash: 9c0e5c668210ec7fff5c7e2bb37afb123db8c5c4
+ms.sourcegitcommit: 32d218f5bd74f1cd106f4248115985df631d0a8c
+ms.translationtype: HT
+ms.contentlocale: sv-SE
+ms.lasthandoff: 09/24/2018
+ms.locfileid: "46983318"
 documentType: LandingData
 title: Dokumentation om Language Understanding Intelligent Service (LUIS)
 metadata:
   document_id: 
   title: Language Understanding Intelligent Service (LUIS) – självstudier, snabbstarter, API-referens
   description: Lär dig mer om att använda Language Understanding-tjänsten så att ditt program kan förstå vad en person vill när den använder egna ord.
-  author: Kaiqb
-  manager: carolz
+  author: nitinme
+  manager: cgronlun
   ms.service: cognitive-services
   ms.tgt_pltfrm: na
   ms.devlang: na
   ms.topic: landing-page
-  ms.date: 06/28/2018
-  ms.author: kamrani
-  ms.openlocfilehash: f3ccbb033354afc01fa840b3129d305f04942ffd
-  ms.sourcegitcommit: d7725f1f20c534c102021aa4feaea7fc0d257609
-  ms.translationtype: HT
-  ms.contentlocale: sv-SE
-  ms.lasthandoff: 06/29/2018
-  ms.locfileid: "37095578"
+  ms.date: 09/24/2018
+  ms.author: nitinme
 abstract:
   description: Language Understanding-tjänsten (LUIS) gör så att ditt program kan förstå vad en person vill när den använder egna ord. LUIS använder maskininlärning för att göra det möjligt för utvecklare att skapa program som kan ta emot indata från användaren i naturligt språk och sedan extrahera betydelse.
+  aside:
+    image:
+      alt: 
+      height: 110
+      src: ../media/index/luis-landing-page-video.png
+      width: 250
+    title: Senaste nytt för LUIS (18:28)
+    href: https://azure.microsoft.com/resources/videos/whats-new-with-language-understanding-service-luis
+    width: 250
 sections:
+- items:
+  - type: list
+    style: cards
+    className: cardsM
+    columns: 3
+    items:
+    - href: /azure/cognitive-services/luis/what-is-luis
+      html: <p>Lär dig mer om tjänsten Language Understanding (LUIS).</p>
+      image:
+        src: ../media/index/i_overview.svg
+      title: Vad är LUIS?
+    - href: /azure/cognitive-services/luis/luis-how-plan-your-app
+      html: <p>Skapa ett översikt av avsikter och entiteter som är relevanta för din app.</p>
+      image:
+        src: ../media/index/i_guidelines.svg
+      title: Planera LUIS-appen
+    - href: /azure/cognitive-services/luis/luis-concept-best-practices
+      html: <p>Följ dessa rekommenderade säkerhetsmetoder när du skapar en LUIS-app.</p>
+      image:
+        src: ../media/index/i_guidelines.svg
+      title: Bästa metoder för en LUIS-app
 - title: Snabbstarter på 5 minuter
   items:
   - type: table
@@ -73,13 +103,18 @@ sections:
     - html: <a href="luis-quickstart-primary-and-secondary-data">Lägga till en enkel entitet och fraslista</a>
     - html: <a href="luis-quickstart-intent-and-key-phrase">Lägga till keyPhrase-entitet</a>
     - html: <a href="luis-quickstart-intent-and-sentiment-analysis">Lägga till attitydanalys</a>
+- title: Exempel
+  items:
+  - type: list
+    style: unordered
+    items:
+    - html: <a href="https://aka.ms/luis-code-samples">Exempel på GitHub</a><br/>
 - title: Videoklipp
   items:
   - type: list
     style: unordered
     items:
     - html: <a href="https://channel9.msdn.com/Shows/Azure-Friday/At-Build-2018-Cognitive-Services-Language-LUIS/player" >Azure Friday på Build 2018 – Cognitive Services – Language Understanding (LUIS)</a>
-    - html: <a href="https://channel9.msdn.com/Shows/AI-Show/Whats-New-with-Language-Understanding-Service-LUIS/player" > AI-uppvisning på Build 2018 – Nyheter med Language Understanding Service (LUIS)</a>
     - html: <a href="https://channel9.msdn.com/events/Build/2018/BRK3208" >Session på Build 2018 – Robotintelligens, talfunktioner och regelverk för NLU</a>
 - title: Referens
   items:
@@ -91,5 +126,7 @@ sections:
       html: <p><a href="https://aka.ms/luis-endpoint-apis">Slutpunkts-API</a></p><p><a href="https://aka.ms/luis-authoring-apis">Redigera API</a></p>
     - title: SDK:er
       html: <p><a href="https://aka.ms/luis-endpoint-sdk">Slutpunkt för .NET SDK</a></p><p><a href="https://aka.ms/luis-authoring-sdk">Redigera .NET SDK</a></p>
-    - title: Kodexempel
-      html: <p><a href="https://aka.ms/luis-code-samples">Kodexempel</a></p>
+    - title: PowerShell
+      html: <p><a href=https://docs.microsoft.com/powershell/module/azurerm.cognitiveservices/?view=azurermps-4.4.1#cognitive_services">Azure PowerShell</a></p>
+    - title: CLI
+      html: <p><a href="https://docs.microsoft.com/cli/azure/cognitiveservices?view=azure-cli-latest#az_cognitiveservices_list">Azure CLI</a></p>
