--- a/articles/cognitive-services/LUIS/toc.yml
+++ b/articles/cognitive-services/LUIS/toc.yml
@@ -5,6 +5,7 @@ items:
   items:
   - name: Vad är Language Understanding?
     href: what-is-luis.md
+  expanded: true
 - name: Snabbstarter
   items:
   - name: Bygg en fördefinierad domänapp
@@ -47,7 +48,6 @@ items:
         href: luis-get-started-python-add-utterance.md
       - name: Ruby
         href: luis-get-started-ruby-add-utterance.md
-  expanded: true
 - name: Självstudier
   items:
   - name: Bygg en app
@@ -262,7 +262,9 @@ items:
       href: luis-reference-prebuilt-deprecated.md
     - name: Entitet för e-post
       href: luis-reference-prebuilt-email.md
-    - name: Entitet för keyPhrase
+    - name: GeographyV2-entitet
+      href: luis-reference-prebuilt-geographyV2.md
+    - name: KeyPhrase-entitet
       href: luis-reference-prebuilt-keyphrase.md
     - name: Enheter för nummer
       href: luis-reference-prebuilt-number.md
@@ -270,6 +272,8 @@ items:
       href: luis-reference-prebuilt-ordinal.md
     - name: Entitet för procentandel
       href: luis-reference-prebuilt-percentage.md
+    - name: PersonName-entitet
+      href: luis-reference-prebuilt-person.md
     - name: Entitet för telefonnummer
       href: luis-reference-prebuilt-phonenumber.md
     - name: Entitet för temperatur
@@ -284,7 +288,7 @@ items:
     href: https://aka.ms/luis-endpoint-apis
   - name: HTTP-koder
     href: luis-reference-response-codes.md
-  - name: Azure CLI 2.0
+  - name: Azure CLI
     href: https://aka.ms/az-cli-cognitiveservices
   - name: Azure RM PowerShell
     href: https://aka.ms/azure-powershell-cognitiveservices
@@ -364,9 +368,9 @@ items:
     href: https://blog.botframework.com/category/luis/
   - name: Kunskapsbas
     href: https://cognitive.uservoice.com/knowledgebase/topics/127872-luis-language-understanding-intelligent-service
-ms.openlocfilehash: 6c8c1e93de904de2624a34a8e81bcb225cbce6d6
-ms.sourcegitcommit: ab9514485569ce511f2a93260ef71c56d7633343
+ms.openlocfilehash: 05bc00f8ff072b842de8a4ff673501aad8742123
+ms.sourcegitcommit: 32d218f5bd74f1cd106f4248115985df631d0a8c
 ms.translationtype: HT
 ms.contentlocale: sv-SE
-ms.lasthandoff: 09/15/2018
-ms.locfileid: "45630298"
+ms.lasthandoff: 09/24/2018
+ms.locfileid: "46985961"
