--- a/articles/cognitive-services/Speech-Service/index.yml
+++ b/articles/cognitive-services/Speech-Service/index.yml
@@ -1,36 +1,63 @@
 ### YamlMime:YamlDocument
-ms.openlocfilehash: bec19b959aa2ce99a7237894a50c49666341827b
-ms.sourcegitcommit: 3f8f973f095f6f878aa3e2383db0d296365a4b18
+ms.openlocfilehash: 460c0708bf51966bd1b6862445a6541436723688
+ms.sourcegitcommit: 32d218f5bd74f1cd106f4248115985df631d0a8c
 ms.translationtype: HT
 ms.contentlocale: sv-SE
-ms.lasthandoff: 08/20/2018
-ms.locfileid: "42440262"
+ms.lasthandoff: 09/24/2018
+ms.locfileid: "46952298"
 documentType: LandingData
-title: Speech Service och SDK (förhandsversion)
+title: Dokumentation om Speech Service SDK
 metadata:
-  title: Dokumentation om Speech Service – självstudier, snabbstarter, API-referens – Cognitive Services | Microsoft Docs
+  title: Dokumentation om Speech Service SDK – självstudier, snabbstarter, API-referens – Cognitive Services | Microsoft Docs
   meta.description: >
     The Speech Service provides developers an easy way to add powerful speech-enabled features to their applications.
 
     Examples include&#58; voice command control & dialog, natural speech conversation, speech transcription & dictation, and speech translation.
   services: cognitive-services
-  author: noellelacharite
-  manager: nolachar
+  author: nitinme
+  manager: cgronlun
   layout: LandingPage
   ms.service: cognitive-services
   ms.component: speech-service
   ms.tgt_pltfrm: na
   ms.devlang: na
   ms.topic: landing-page
-  ms.date: 07/16/2018
-  ms.author: nolachar
+  ms.date: 09/24/2018
+  ms.author: nitinme
 abstract:
-  description: >
-    Via Speech SDK kan utvecklare med hjälp av <a href="overview">Speech Service</a> lägga till talaktiverade funktioner i sina appar.
-
-    Bland funktionerna finns&#58; <i>tal till text</i> (taligenkänning/SR), <i>avsikt</i>, <i>översättning</i> och <i>text till tal</i> (TTS).
+  description: Lär dig hur du använder Speech Service och Speech SDK för att lägga till stöd för talfunktioner till dina appar. Du kan använda Speech SDK för att lägga till funktionerna <i>tal till text</i> (taligenkänning/SR) <i>avsikt</i>, <i>översättning</i> och <i>text till tal</i> (text till tal) i dina appar. Taltjänsten har även ett REST API som fungerar med alla programmeringsspråk som kan göra HTTP-förfrågningar.
+  aside:
+    image:
+      alt: 
+      height: 110
+      src: ../media/index/speech-landing-page-video.png
+      width: 250
+    title: Speech Service-översikt (10:34)
+    href: https://azure.microsoft.com/resources/videos/connect-2017-microsoft-cognitive-services-overview-of-advanced-speech-capabilities/
+    width: 250
 sections:
-- title: SDK-nedladdning och snabbstart på fem minuter
+- items:
+  - type: list
+    style: cards
+    className: cardsM
+    columns: 3
+    items:
+    - href: /azure/cognitive-services/speech-service/overview
+      html: <p>Läs mer om Azure Speech Service.</p>
+      image:
+        src: ../media/index/i_overview.svg
+      title: Vad är Speech Service?
+    - href: /azure/cognitive-services/speech-service/get-started
+      html: <p>Lär dig hur du registrerar dig för Speech Service utan kostnad.</p>
+      image:
+        src: ../media/index/i_get-started.svg
+      title: Registrera dig för Speech Service
+    - href: /azure/cognitive-services/speech-service/speech-devices-sdk
+      html: <p>Läs mer om talbaserad maskinvarureferens.</p>
+      image:
+        src: ../media/index/i_guidelines.svg
+      title: Speech Devices SDK
+- title: Snabbstarter på 5 minuter
   items:
   - type: paragraph
     text: Lär du hur du laddar ned, installerar och använder produkten genom att klicka på önskad länk <img src="media/index/link.jpg" height="15" width="15"></img> nedan.
@@ -48,6 +75,10 @@ sections:
     - image:
         src: media/index/logo_java.jpg
     - image:
+        src: media/index/logo_objc.jpg
+    - image:
+        src: media/index/logo_js.svg
+    - image:
         src: media/index/logo_rest_sr.svg
     - image:
         src: media/index/logo_rest_tts.svg
@@ -61,12 +92,16 @@ sections:
       - href: quickstart-java-jre
       - href: 
       - href: 
+      - href: 
+      - href: 
     - title: Windows 10 (x86)
       values:
       - href: quickstart-csharp-uwp
       - href: quickstart-csharp-windows
       - href: quickstart-cpp-windows
       - href: quickstart-csharp-dotnetcore-windows
+      - href: 
+      - href: 
       - href: 
       - href: 
       - href: 
@@ -79,11 +114,15 @@ sections:
       - href: quickstart-java-jre
       - href: 
       - href: 
+      - href: 
+      - href: 
     - title: Linux (x86)
       values:
       - href: 
       - href: 
       - href: quickstart-cpp-linux
+      - href: 
+      - href: 
       - href: 
       - href: 
       - href: 
@@ -97,6 +136,8 @@ sections:
       - href: quickstart-java-android
       - href: 
       - href: 
+      - href: 
+      - href: 
     - title: Devices SDK (ARM64)
       values:
       - href: 
@@ -106,6 +147,19 @@ sections:
       - href: speech-devices-sdk
       - href: 
       - href: 
+      - href: 
+      - href: 
+    - title: iOS (ARM64)
+      values:
+      - href: 
+      - href: 
+      - href: 
+      - href: 
+      - href: 
+      - href: quickstart-objectivec-ios
+      - href: 
+      - href: 
+      - href: 
     - title: Webb
       values:
       - href: 
@@ -113,49 +167,51 @@ sections:
       - href: 
       - href: 
       - href: 
+      - href: 
+      - href: quickstart-js-browser
       - href: rest-apis
       - href: rest-apis
-- title: Exempel och referenser för Speech SDK
+- title: Steg för steg-självstudier
+  items:
+  - type: paragraph
+    text: 'Lär dig utveckla program med hjälp av tjänsten för Speech Service:'
+  - type: list
+    style: unordered
+    items:
+    - html: <a href="speech-to-text-sample.md">Tal till text (SR)</a><br/>
+    - html: <a href="intent.md">Avsiktsigenkänning</a><br/>
+    - html: <a href="translation.md">Översättning</a>
+- title: Exempel
+  items:
+  - type: paragraph
+    text: 'Hitta exempel på Github för Speech Service:'
+  - type: list
+    style: unordered
+    items:
+    - html: <a href="https://github.com/Azure-Samples/cognitive-services-speech-sdk">Service SDK-exempel</a><br/>
+    - html: <a href="https://github.com/Azure-Samples/Cognitive-Services-Speech-Devices-SDK">Device SDK-exempel</a><br/>
+- title: Referens
   items:
   - type: list
     style: cards
     className: cardsD
     items:
-    - title: Exempel
+    - title: SDK-referens
       html: >
-        &nbsp;&#8226; <a href="speech-to-text-sample.md">Tal till text (SR)</a><br/>
+        <p><a href="https://aka.ms/csspeech/csharpref">C# API (UWP och .NET)</a></p>
 
-        &nbsp;&#8226; <a href="intent.md">Avsiktsigenkänning</a><br/>
+        <p><a href="https://aka.ms/csspeech/cppref">C++ API</a></p>
 
-        &nbsp;&#8226; <a href="translation.md">Översättning</a>
-    - title: API-referens
+        <p><a href="https://aka.ms/csspeech/javaref">Java-API</a></p>
+
+        <p><a href="https://aka.ms/csspeech/objectivecref">Objective-C API</a></p>
+
+        <p><a href="https://aka.ms/csspeech/javascript">JavaScript API</a></p>
+    - title: REST-API
       html: >
-        &nbsp;&#8226; <a href="https://aka.ms/csspeech/csharpref">C# API (UWP och .NET)</a><br/>
-
-        &nbsp;&#8226; <a href="https://aka.ms/csspeech/cppref">C++ API</a><br/>
-
-        &nbsp;&#8226; <a href="https://aka.ms/csspeech/javaref">Java API</a>
-    - title: Vanliga frågor och svar
+        <p><a href="https://docs.microsoft.com/azure/cognitive-services/speech-service/rest-apis">REST API</a></p>
+    - title: PowerShell
       html: >
-        &nbsp;&#8226; <a href="faq-stt">Tal till text</a><br/>
-
-        &nbsp;&#8226; <a href="faq-text-to-speech">Text till tal</a><br/>
-
-        &nbsp;&#8226; <a href="https://www.microsoft.com/translator/faq.aspx">Översättning</a>
-  - type: paragraph
-    text: Använd exemplet och API:t ovan med din prenumerationsnyckel (läs <a href="get-started.md">Prova Speech Service kostnadsfritt</a>).
-- title: Anpassa Speech med dina egna data
-  items:
-  - type: paragraph
-    text: >
-      Med Speech Service kan du även anpassa modeller för att hantera specialvokabulär, bullriga miljöer och olika sätt att tala.<br/>
-
-      &nbsp;&#8226; <a href="how-to-customize-speech-models">Anpassat tal till text</a><br/>
-
-      &nbsp;&#8226; <a href="https://www.microsoft.com/translator/customization.aspx">Anpassad talöversättning</a><br/>
-
-      &nbsp;&#8226; <a href="https://cris.ai/Home/customvoice">Anpassad text till tal</a>
-- title: Referensdesign för Speech-aktiverad maskinvara
-  items:
-  - type: paragraph
-    text: De som vill bygga ny Speech-aktiverad enhetsmaskinvara hittar vår referensenhet på <a href='https://docs.microsoft.com/azure/cognitive-services/speech-service/speech-devices-sdk'>Speech Devices SDK</a>.
+        <p><a href=https://docs.microsoft.com/powershell/module/azurerm.cognitiveservices/?view=azurermps-4.4.1#cognitive_services">Azure PowerShell</a></p>
+    - title: CLI
+      html: <p><a href="https://docs.microsoft.com/cli/azure/cognitiveservices?view=azure-cli-latest#az_cognitiveservices_list">Azure CLI</a></p>
