--- a/articles/cognitive-services/Speech-Service/toc.yml
+++ b/articles/cognitive-services/Speech-Service/toc.yml
@@ -1,5 +1,5 @@
 items:
-- name: Speech Service och SDK
+- name: Dokumentation om Speech Service SDK
   href: index.yml
 - name: Översikt
   items:
@@ -34,14 +34,16 @@ items:
     - name: Använda Java (Windows eller Linux)
       displayName: recognize speech, speech recognition, speech to text, stt, jre, jvm
       href: quickstart-java-jre.md
+    - name: Använda JavaScript (webbläsare)
+      displayName: recognize speech, speech recognition, speech to text, stt
+      href: quickstart-js-browser.md
+    - name: Använda Objective-C (iOS)
+      displayName: recognize speech, speech recognition, speech to text, stt, xcode
+      href: quickstart-objectivec-ios.md
   - name: Komma igång med Speech Devices SDK
     displayName: roobo, speech devices sdk
     href: speech-devices-sdk-qsg.md
 - name: Självstudier
-  items:
-  - name: Identifiera avsikter i tal (C#)
-    href: how-to-recognize-intents-from-speech-csharp.md
-- name: Instruktionsguider
   items:
   - name: Identifiera tal
     displayName: recognize speech, speech recognition, speech to text, stt
@@ -54,12 +56,11 @@ items:
       href: how-to-recognize-speech-java.md
     - name: REST
       href: how-to-recognize-speech-rest.md
-  - name: Syntetisera tal (REST)
-    displayName: synthesize speech, speech synthesis, text to speech, tts
-    href: how-to-text-to-speech.md
   - name: Identifiera avsikter från tal
     displayName: recognize intent, intent recognition, language understanding service, luis
     items:
+    - name: C#
+      href: how-to-recognize-intents-from-speech-csharp.md
     - name: C++
       href: how-to-recognize-intents-from-speech-cpp.md
     - name: Java
@@ -73,29 +74,36 @@ items:
       href: how-to-translate-speech-cpp.md
     - name: Java
       href: how-to-translate-speech-java.md
+- name: Instruktionsguider
+  items:
+  - name: Syntetisera tal (REST)
+    displayName: synthesize speech, speech synthesis, text to speech, tts
+    href: how-to-text-to-speech.md
   - name: Batch-transkription (REST)
     displayName: recognize speech, speech recognition, speech to text, stt
     href: batch-transcription.md
   - name: Hämta Speech Devices SDK
     displayName: roobo, speech devices sdk, download
     href: get-speech-devices-sdk.md
-  - name: Anpassa akustiska modeller
-    href: how-to-customize-acoustic-models.md
-  - name: Anpassa språkmodeller
-    href: how-to-customize-language-model.md
-  - name: Anpassa uttal
-    href: how-to-customize-pronunciation.md
-  - name: Anpassa rösttyper (bot brand voice)
-    href: how-to-customize-voice-font.md
+  - name: Anpassa
+    items:
+    - name: Anpassa akustiska modeller
+      href: how-to-customize-acoustic-models.md
+    - name: Anpassa språkmodeller
+      href: how-to-customize-language-model.md
+    - name: Anpassa uttal
+      href: how-to-customize-pronunciation.md
+    - name: Anpassa rösttyper (bot brand voice)
+      href: how-to-customize-voice-font.md
+    - name: Anpassa väckningsord för enhet (Devices SDK)
+      displayName: roobo, speech devices sdk, wake word, keyword spotting, kws
+      href: speech-devices-sdk-create-kws.md
   - name: Spela in röstexempel
     href: record-custom-voice-samples.md
   - name: Förbered avskrifter
     href: prepare-transcription.md
   - name: Använda anpassade ljudströmmar
     href: how-to-use-audio-input-streams.md
-  - name: Anpassa väckningsord för enhet (Devices SDK)
-    displayName: roobo, speech devices sdk, wake word, keyword spotting, kws
-    href: speech-devices-sdk-create-kws.md
 - name: Begrepp
   items:
   - name: Tal till text
@@ -180,9 +188,9 @@ items:
     href: https://azure.microsoft.com/roadmap/?category=ai-machine-learning
   - name: Sekretess och cookies
     href: https://privacy.microsoft.com/privacystatement
-ms.openlocfilehash: fd6df22b2d96dd72d6a3da0c6946a461420b3153
-ms.sourcegitcommit: 616e63d6258f036a2863acd96b73770e35ff54f8
+ms.openlocfilehash: 7b8b81afa5090144f1be7d747d4af1f4a319a0f1
+ms.sourcegitcommit: 32d218f5bd74f1cd106f4248115985df631d0a8c
 ms.translationtype: HT
 ms.contentlocale: sv-SE
-ms.lasthandoff: 09/14/2018
-ms.locfileid: "45605588"
+ms.lasthandoff: 09/24/2018
+ms.locfileid: "46985885"
