--- a/articles/cognitive-services/TOC.yml
+++ b/articles/cognitive-services/TOC.yml
@@ -1,6 +1,6 @@
 items:
 - name: Dokumentation om Azure Cognitive Services
-  href: index.yml
+  href: index.md
 - name: Översikt
   items:
   - name: Vad är Cognitive Services?
@@ -12,20 +12,20 @@ items:
   items:
   - name: Skapa ett konto
     href: cognitive-services-apis-create-account.md
-  - name: Skapa en bildklassificerare
-    href: ./custom-vision-service/getting-started-build-a-classifier.md
-  - name: Skapa en app för hemautomatisering
-    href: ./luis/luis-get-started-create-app.md
-  - name: Skapa en app för textanalys i .NET
-    href: ./text-analytics/quickstarts/csharp.md
 - name: Självstudier
   items:
-  - name: Webbsida för anpassad sökning
-    href: ./bing-custom-search/tutorials/custom-search-web-page.md
-  - name: LUIS-app
-    href: ./luis/luis-nodejs-tutorial-build-bot-framework-sample.md
-  - name: Förbättra avsiktlig noggrannhet för kommandon
-    href: ./luis/luis-tutorial-batch-testing.md
+  - name: Utveckla en app med visuellt innehåll
+    href: ./Computer-vision/tutorials/csharptutorial.md
+  - name: Identifiera avsikter med Speech SDK och LUIS
+    href: ./speech-service/how-to-recognize-intents-from-speech-csharp.md
+  - name: Skapa en LUIS-app
+    href: ./luis/luis-quickstart-intents-only.md
+  - name: Använd textanalys med Power BI
+    href: ./Text-Analytics/tutorials/tutorial-power-bi-key-phrases.md
+  - name: Skapa en app för webbsökning i Bing
+    href: ./bing-web-search/tutorial-bing-web-search-single-page-app.md
+  - name: Skapa en app för bildsökning i Bing
+    href: ./bing-image-search/tutorial-bing-image-search-single-page-app.md
 - name: Resurser
   items:
   - name: Azure-översikt
@@ -42,9 +42,9 @@ items:
     href: http://go.microsoft.com/fwlink/?LinkId=698895
   - name: Kunskapsbas
     href: https://cognitive.uservoice.com/knowledgebase
-ms.openlocfilehash: 8bd7984fd713a2acbb1ca2cc66e3d64bd49ef5a4
-ms.sourcegitcommit: d211f1d24c669b459a3910761b5cacb4b4f46ac9
+ms.openlocfilehash: 233a9bb508c8e6d02fd3e95cb8176f56bc9726b9
+ms.sourcegitcommit: 32d218f5bd74f1cd106f4248115985df631d0a8c
 ms.translationtype: HT
 ms.contentlocale: sv-SE
-ms.lasthandoff: 09/06/2018
-ms.locfileid: "44023833"
+ms.lasthandoff: 09/24/2018
+ms.locfileid: "46972637"
