--- a/articles/cognitive-services/text-analytics/index.yml
+++ b/articles/cognitive-services/text-analytics/index.yml
@@ -1,11 +1,17 @@
 ### YamlMime:YamlDocument
+ms.openlocfilehash: 19bb8a72e6455010477805a78bc15de554a2eb83
+ms.sourcegitcommit: 32d218f5bd74f1cd106f4248115985df631d0a8c
+ms.translationtype: HT
+ms.contentlocale: sv-SE
+ms.lasthandoff: 09/24/2018
+ms.locfileid: "46987483"
 documentType: LandingData
 title: Dokumentation om API för textanalys
 metadata:
   title: Dokumentation om API för textanalys – Självstudier, API-referens – Azure Cognitive Services | Microsoft Docs
   description: Lär dig att utföra avancerad och naturlig språkbearbetning på texter med hjälp av API för textanalys. I dessa självstudier visas du hur man skriver kod som använder sig av textanalystjänsten.
   services: cognitive-services
-  author: HeidiSteen
+  author: nitinme
   manager: cgronlun
   layout: LandingPage
   ms.service: cognitive-services
@@ -13,17 +19,32 @@ metadata:
   ms.tgt_pltfrm: na
   ms.devlang: na
   ms.topic: landing-page
-  ms.date: 03/07/2018
-  ms.author: heidist
-  ms.openlocfilehash: aee5b1c47d3db4f630c528707f03d175e52c2c4f
-  ms.sourcegitcommit: 0a84b090d4c2fb57af3876c26a1f97aac12015c5
-  ms.translationtype: HT
-  ms.contentlocale: sv-SE
-  ms.lasthandoff: 07/11/2018
-  ms.locfileid: "38398641"
+  ms.date: 09/24/2018
+  ms.author: nitinme
 abstract:
   description: 'API för textanalys är en molnbaserad tjänst som ger avancerad och naturlig språkbearbetning för texter och som innehåller tre huvudfunktioner: attitydanalys, extrahering av diskussionsämne och språkidentifiering. Lär dig hur du analyserar innehåll på olika sätt med våra snabbstarter, självstudier och exempel.'
 sections:
+- items:
+  - type: list
+    style: cards
+    className: cardsM
+    columns: 3
+    items:
+    - href: /azure/cognitive-services/text-analytics/overview
+      html: <p>Lär dig mer om API för textanalys.</p>
+      image:
+        src: ../media/index/i_overview.svg
+      title: Vad är textanalys?
+    - href: /azure/cognitive-services/text-analytics/how-tos/text-analytics-how-to-signup
+      html: <p>Så registrerar du dig för API för textanalys.</p>
+      image:
+        src: ../media/index/i_get-started.svg
+      title: Registrera dig för API för textanalys
+    - href: /azure/cognitive-services/text-analytics/how-tos/text-analytics-how-to-access-key
+      html: <p>Lär dig att få åtkomstnycklar och slutpunkter för API för textanalys.</p>
+      image:
+        src: ../media/index/i_tasks.svg
+      title: Åtkomstnycklar för API för textanalys
 - title: Snabbstarter på 5 minuter
   items:
   - type: paragraph
@@ -68,3 +89,7 @@ sections:
     items:
     - title: REST
       html: <p><a href="https://westus.dev.cognitive.microsoft.com/docs/services/TextAnalytics.V2.0/operations/56f30ceeeda5650db055a3c7">API-referens</a></p>
+    - title: PowerShell
+      html: <p><a href=https://docs.microsoft.com/powershell/module/azurerm.cognitiveservices/?view=azurermps-4.4.1#cognitive_services">Azure PowerShell</a></p>
+    - title: CLI
+      html: <p><a href="https://docs.microsoft.com/cli/azure/cognitiveservices?view=azure-cli-latest#az_cognitiveservices_list">Azure CLI</a></p>
