--- a/articles/databox/index.yml
+++ b/articles/databox/index.yml
@@ -1,9 +1,15 @@
 ### YamlMime:YamlDocument
+ms.openlocfilehash: f4ef48157896d7cf4947fbc8ef6eba8b59ec414b
+ms.sourcegitcommit: 32d218f5bd74f1cd106f4248115985df631d0a8c
+ms.translationtype: HT
+ms.contentlocale: sv-SE
+ms.lasthandoff: 09/24/2018
+ms.locfileid: "46986530"
 documentType: LandingData
-title: Dokumentation om Azure Data Box
+title: Azure Data Box för överföring offline
 metadata:
-  title: Dokumentation om Azure Data Box
-  description: Med Azure Data Box kan du överföra flera terabyte data till Azure på ett snabbt, prisvärt och tillförlitligt sätt. Microsoft får den säkra dataöverföringen att gå snabbare genom att leverera dina diskar och hantera logistiken från slutpunkt till slutpunkt.
+  title: Azure Data Box-dokumentation för överföring offline
+  description: Med Azure Data Box kan du överföra hundratals terabyte data till Azure på ett snabbt, prisvärt och tillförlitligt sätt. Använd Data Box-enheter för överföring av data offline när du har begränsad tid, nätverksresurser eller budget.
   services: databox
   author: alkohli
   manager: twooley
@@ -11,36 +17,35 @@ metadata:
   ms.tgt_pltfrm: na
   ms.devlang: na
   ms.topic: landing-page
-  ms.date: 07/10/2018
+  ms.date: 09/24/2018
   ms.author: alkohli
-  ms.openlocfilehash: 5077d0ba77b6bdce99f1dfdf258182980a367b6c
-  ms.sourcegitcommit: e0a678acb0dc928e5c5edde3ca04e6854eb05ea6
-  ms.translationtype: HT
-  ms.contentlocale: sv-SE
-  ms.lasthandoff: 07/13/2018
-  ms.locfileid: "39010148"
 abstract:
-  description: Med Azure Data Box kan du överföra flera terabyte data till Azure på ett snabbt, prisvärt och tillförlitligt sätt. Microsoft får den säkra dataöverföringen att gå snabbare genom att leverera dina diskar och hantera logistiken från slutpunkt till slutpunkt.<p>Överför stora mängder data till Azure i fyra enkla steg – beställ, ta emot, kopiera data till diskar och returnera diskarna till Azure. När diskarna har tagits emot matas data in i Azure, och diskarna raderas på ett säkert sätt.<p><a href="/azure/databox/data-box-disk-overview">Läs mer om Data Box Disk</a>.</p>
+  description: Med Azure Data Box kan du överföra hundratals terabyte data till Azure på ett snabbt, prisvärt och tillförlitligt sätt. Använd Data Box-enheter för överföring av data offline när du har begränsad tid, nätverksresurser eller budget.<p>Beroende på datastorleken kan du välja mellan Data Box-Disk, Data Box<SUP>förhandsversion</SUP> eller Data Box – tung<SUP>förhandsversion</SUP>. För varje enhet sker överföringen till Azure i 4 enkla steg – beställa, ta emot, kopiera data till enhet och returnera enheten till Azure. I Azure-datacentret överförs och raderas data.</p><p>Lär dig hur du kan använda Data Box för att överföra dina offlinedata med våra snabbstarter och självstudier.</p>
 sections:
 - title: Snabbstart
   items:
-  - type: paragraph
-    text: Lär dig överföra data till Azure med hjälp av Data Box Disk.
   - type: list
     style: icon48
     items:
     - image:
-        src: https://docs.microsoft.com/media/common/i_portal.svg
-      text: Azure Portal
+        src: https://docs.microsoft.com/media/common/i_quick-start.svg
+      text: Konfigurera Data Box i Azure-portalen
+      href: /azure/databox/data-box-quickstart-portal
+    - image:
+        src: https://docs.microsoft.com/media/common/i_quick-start.svg
+      text: Konfigurera Data Box Disk<SUP>Förhandsversion</SUP> i Azure-portalen
       href: /azure/databox/data-box-disk-quickstart-portal
-- title: Självstudie steg-för-steg
+    - image:
+        src: https://docs.microsoft.com/media/common/i_quick-start.svg
+      text: Registrera dig för Data Box – tung<SUP>Förhandsversion</SUP>
+      href: /azure/databox/data-box-heavy-overview#sign-up
+- title: Självstudier
   items:
-  - type: paragraph
-    text: Lär dig importera data till Azure med hjälp av Data Box Disk.
   - type: list
-    style: ordered
+    style: cards
+    className: cardsD
     items:
-    - html: <a href="data-box-disk-deploy-ordered">Beställ Data Box Disk</a>
-    - html: <a href="data-box-disk-deploy-set-up">Konfigurera Data Box Disk</a>
-    - html: <a href="data-box-disk-deploy-copy-data">Kopiera data till Data Box Disk</a>
-    - html: <a href="data-box-disk-deploy-picked-up">Returnera Data Box Disk och ladda upp data till Azure</a>
+    - title: För Data Box
+      html: <p><a href="/azure/databox/data-box-deploy-ordered">Beställ Azure Data Box</a></p><p><a href="/azure/databox/data-box-deploy-set-up">Kabelanslut och anslut Azure Data Box</a></p><p><a href="/azure/databox/data-box-deploy-copy-data">Kopiera data till Azure Data Box</a></p><p><a href="/azure/databox/data-box-deploy-picked-up">Returnera Azure Data Box och verifiera uppladdning</a></p>
+    - title: För Data Box Disk<SUP>Förhandsversion</SUP>
+      html: <p><a href="/azure/databox/data-box-disk-deploy-ordered">Beställ Azure Data Box Disk</a></p><p><a href="/azure/databox/data-box-disk-deploy-set-up">Packa upp, ansluta och låsa upp en Azure Data Box-disk</a></p><p><a href="/azure/databox/data-box-disk-deploy-copy-data">Kopiera data till Azure Data Box Disk</a></p><p><a href="/azure/databox/data-box-disk-deploy-picked-up">Returnera Azure Data Box Disk och verifiera uppladdning</a></p>
