--- a/articles/iot-dps/toc.yml
+++ b/articles/iot-dps/toc.yml
@@ -41,6 +41,10 @@ items:
         href: quick-create-simulated-device-x509-node.md
       - name: Python
         href: quick-create-simulated-device-x509-python.md
+    - name: Symmetrisk nyckelattestering
+      items:
+      - name: C
+        href: quick-create-simulated-device-symm-key.md
   - name: Registrera enheter med hjälp av API:er för etableringstjänster
     items:
     - name: TPM-attestering
@@ -84,6 +88,8 @@ items:
   items:
   - name: Automatisk etablering
     href: concepts-auto-provisioning.md
+  - name: Omprovisionering
+    href: concepts-device-reprovision.md
   - name: Enheter
     href: concepts-device.md
   - name: Säkerhet
@@ -92,6 +98,8 @@ items:
     href: concepts-service.md
   - name: TPM-attestering
     href: concepts-tpm-attestation.md
+  - name: Symmetrisk nyckelattestering
+    href: concepts-symmetric-key-attestation.md
 - name: Instruktionsguider
   items:
   - name: Ansluta MXChip IoT DevKit till IoT Hub
@@ -106,6 +114,8 @@ items:
       href: how-to-verify-certificates.md
     - name: Löpande enhetscertifikat
       href: how-to-roll-certificates.md
+    - name: Etablera om enheter
+      href: how-to-reprovision.md
     - name: Hantera avregistrering
       href: how-to-revoke-device-access-portal.md
     - name: Hantera avetablering
@@ -126,6 +136,12 @@ items:
       maintainContext: true
   - name: Använda attesteringsmekanismer med SDK
     href: use-hsm-with-sdk.md
+  - name: Etablera för flera innehavare
+    href: how-to-provision-multitenant.md
+  - name: Använd anpassade allokeringsprinciper
+    href: how-to-use-custom-allocation-policies.md
+  - name: Använda symmetriska nycklar med äldre enheter
+    href: how-to-legacy-device-symm-key.md
   - name: Använda SDK-verktyg för utveckling
     href: how-to-use-sdk-tools.md
 - name: Referens
@@ -210,9 +226,9 @@ items:
     href: https://microsoft.github.io/techcasestudies/#technology=IoT&sortBy=featured
   - name: Videoklipp
     href: https://azure.microsoft.com/documentation/videos/index/?services=iot-hub
-ms.openlocfilehash: 0a4369214f26622c2a30136a814b8e788e187144
-ms.sourcegitcommit: f057c10ae4f26a768e97f2cb3f3faca9ed23ff1b
+ms.openlocfilehash: 7c662941bc72a9650cd40bd1361a6d43c11a4c5b
+ms.sourcegitcommit: 32d218f5bd74f1cd106f4248115985df631d0a8c
 ms.translationtype: HT
 ms.contentlocale: sv-SE
-ms.lasthandoff: 08/17/2018
-ms.locfileid: "41927238"
+ms.lasthandoff: 09/24/2018
+ms.locfileid: "46989404"
