--- a/articles/iot-edge/TOC.yml
+++ b/articles/iot-edge/TOC.yml
@@ -55,6 +55,8 @@ items:
       href: module-edgeagent-edgehub.md
   - name: Distributioner
     href: module-deployment-monitoring.md
+  - name: Offlinefunktioner
+    href: offline-capabilities.md
   - name: IoT Edge-enhet som en gateway
     href: iot-edge-as-gateway.md
   - name: Säkerhet
@@ -95,7 +97,9 @@ items:
       href: how-to-auto-provision-simulated-device-linux.md
     - name: Windows
       href: how-to-auto-provision-simulated-device-windows.md
-  - name: Utveckla och felsöka moduler
+  - name: Utveckla och felsöka moduler i VS 2017
+    href: how-to-visual-studio-develop-csharp-module.md
+  - name: Utveckla och felsöka moduler i VS Code
     items:
     - name: Azure Functions
       href: how-to-develop-csharp-function.md
@@ -135,6 +139,12 @@ items:
       href: how-to-create-transparent-gateway-windows.md
     - name: Modbus-protokollgateway
       href: deploy-modbus-gateway.md
+  - name: Konfigurera proxyinställningar
+    href: how-to-configure-proxy-support.md
+  - name: Lagra data på gränsen
+    items:
+    - name: Azure Blob Storage på IoT Edge
+      href: how-to-store-data-blob.md
   - name: CI/CD i Azure DevOps
     href: how-to-ci-cd.md
   - name: Felsöka
@@ -207,9 +217,9 @@ items:
     href: https://microsoft.github.io/techcasestudies/#technology=IoT&sortBy=featured
   - name: Videoklipp
     href: https://azure.microsoft.com/documentation/videos/index/?services=iot-hub
-ms.openlocfilehash: d2dcc4e642e997903c01b6b375505e88e412d57b
-ms.sourcegitcommit: cf606b01726df2c9c1789d851de326c873f4209a
+ms.openlocfilehash: c3d63ebefed6258798540bdf95f2469b11a89160
+ms.sourcegitcommit: 32d218f5bd74f1cd106f4248115985df631d0a8c
 ms.translationtype: HT
 ms.contentlocale: sv-SE
-ms.lasthandoff: 09/19/2018
-ms.locfileid: "46294483"
+ms.lasthandoff: 09/24/2018
+ms.locfileid: "46984191"
