--- a/articles/service-fabric-mesh/TOC.yml
+++ b/articles/service-fabric-mesh/TOC.yml
@@ -1,69 +1,90 @@
+items:
 - name: Dokumentation om Service Fabric Mesh
   href: index.yml
 - name: Översikt
-  expanded: true
   items:
-    - name: Om Service Fabric Mesh
-      href: service-fabric-mesh-overview.md
+  - name: Om Service Fabric Mesh
+    href: service-fabric-mesh-overview.md
+  expanded: true
 - name: Snabbstarter
   items:
-    - name: Distribuera Hello World
-      href: service-fabric-mesh-quickstart-deploy-container.md
-    - name: Skapa och distribuera en webbapp till Azure Service Fabric Mesh
-      href: service-fabric-mesh-quickstart-dotnet-core.md
+  - name: Distribuera Hello World
+    href: service-fabric-mesh-quickstart-deploy-container.md
+  - name: Skapa och distribuera en webbapp till Azure Service Fabric Mesh
+    href: service-fabric-mesh-quickstart-dotnet-core.md
 - name: Självstudier
   items:
-    - name: 'Skapa, felsöka och distribuera en Service Fabric Mesh-webbapp för flera tjänster'
-      items:
-        - name: 1 – Skapa en Service Fabric Mesh-webbapp
-          href: service-fabric-mesh-tutorial-create-dotnetcore.md
-        - name: 2 – Felsöka en Service Fabric Mesh-webbapp
-          href: service-fabric-mesh-tutorial-debug-service-fabric-mesh-app.md
-        - name: 3 – Distribuera en Service Fabric Mesh-webbapp
-          href: service-fabric-mesh-tutorial-deploy-service-fabric-mesh-app.md
+  - name: Skapa och distribuera en Mesh-app med Visual Studio
+    items:
+    - name: 1 – Skapa en Mesh-app
+      href: service-fabric-mesh-tutorial-create-dotnetcore.md
+    - name: 2 – Felsöka en Mesh-app
+      href: service-fabric-mesh-tutorial-debug-service-fabric-mesh-app.md
+    - name: 3 – Distribuera en Mesh-app
+      href: service-fabric-mesh-tutorial-deploy-service-fabric-mesh-app.md
+    - name: 4 – Uppgradera en Mesh-app
+      href: service-fabric-mesh-tutorial-upgrade.md
+    - name: 5 – Rensa Mesh-resurser
+      href: service-fabric-mesh-tutorial-cleanup-resources.md
+  - name: Distribuera, skala och uppgradera en Service Fabric Mesh-app med en mall
+    items:
+    - name: 1 – Distribuera en Service Fabric Mesh-app
+      href: service-fabric-mesh-tutorial-template-deploy-app.md
+    - name: 2 – Skala tjänster i ett program
+      href: service-fabric-mesh-tutorial-template-scale-services.md
+    - name: 3 – Uppgradera ett program
+      href: service-fabric-mesh-tutorial-template-upgrade-app.md
+    - name: 4 – Ta bort ett program
+      href: service-fabric-mesh-tutorial-template-remove-app.md
 - name: Begrepp
   items:
-    - name: Terminologi
-      href: service-fabric-mesh-terminology.md
-    - name: Service Fabric-resurser
-      href: service-fabric-mesh-service-fabric-resources.md
-    - name: Övervakning och diagnostik
-      href: service-fabric-mesh-monitoring-diagnostics.md
-    - name: Lagringstillstånd
-      href: service-fabric-mesh-storing-state.md
+  - name: Terminologi
+    href: service-fabric-mesh-terminology.md
+  - name: Service Fabric-resurser
+    href: service-fabric-mesh-service-fabric-resources.md
+  - name: Övervakning och diagnostik
+    href: service-fabric-mesh-monitoring-diagnostics.md
+  - name: Lagringstillstånd
+    href: service-fabric-mesh-storing-state.md
 - name: Instruktionsguider
   items:
-    - name: Ställ in din utvecklingsmiljö
-      href: service-fabric-mesh-howto-setup-developer-environment-sdk.md
-    - name: Konfigurera Service Fabric Mesh CLI
-      href: service-fabric-mesh-howto-setup-cli.md
-    - name: Distribuera en .NET Core-app för mikrotjänster
-      href: service-fabric-mesh-howto-deploy-app-template.md
-    - name: Distribuera en app från ett privat register
-      href: service-fabric-mesh-howto-deploy-app-private-registry.md
-    - name: Lagringstillstånd med Azure Files-volym
-      href: service-fabric-mesh-howto-deploy-app-azurefiles-volume.md
-    - name: Oberoende skalning av mikrotjänster i en app
-      href: service-fabric-mesh-howto-app-scale-out.md
+  - name: Ställ in din utvecklingsmiljö
+    href: service-fabric-mesh-howto-setup-developer-environment-sdk.md
+  - name: Konfigurera Service Fabric Mesh CLI
+    href: service-fabric-mesh-howto-setup-cli.md
+  - name: Distribuera en .NET Core-app för mikrotjänster
+    href: service-fabric-mesh-howto-deploy-app-template.md
+  - name: Distribuera en app från ett privat register
+    href: service-fabric-mesh-howto-deploy-app-private-registry.md
+  - name: Lagringstillstånd med Azure Files-volym
+    href: service-fabric-mesh-howto-deploy-app-azurefiles-volume.md
+  - name: Oberoende skalning av mikrotjänster i en app
+    href: service-fabric-mesh-howto-app-scale-out.md
 - name: Referens
   items:
-    - name: 'REST API:er för Service Fabric Mesh-resursprovider'
-      href: /rest/api/servicefabric/sfmeshrp-index
-    - name: 'REST API:er för Service Fabric-klientresurs'
-      href: '/rest/api/servicefabric/sfclient-index#service-fabric-resource-model'
+  - name: REST API:er för Service Fabric Mesh-resursprovider
+    href: /rest/api/servicefabric/sfmeshrp-index
+  - name: REST API:er för Service Fabric-klientresurs
+    href: /rest/api/servicefabric/sfclient-index#service-fabric-resource-model
 - name: Resurser
   items:
-    - name: Vanliga frågor
-      href: service-fabric-mesh-faq.md
-    - name: Exempelprogram
-      href: 'https://github.com/Azure-Samples/service-fabric-mesh'
-    - name: Azure-översikt
-      href: 'https://azure.microsoft.com/roadmap/?category=service-fabric-mesh'
-    - name: Stack Overflow
-      href: 'https://stackoverflow.com/search?q=service-fabric-mesh'
-    - name: Videoklipp
-      href: 'https://azure.microsoft.com/documentation/videos/index/?services=service-fabric-mesh'
-    - name: Tjänstuppdateringar
-      href: 'https://azure.microsoft.com/updates/?product=service-fabric-mesh'
-    - name: Regional tillgänglighet
-      href: 'https://azure.microsoft.com/regions/services/'
+  - name: Vanliga frågor
+    href: service-fabric-mesh-faq.md
+  - name: Exempelprogram
+    href: https://github.com/Azure-Samples/service-fabric-mesh
+  - name: Azure-översikt
+    href: https://azure.microsoft.com/roadmap/?category=service-fabric-mesh
+  - name: Stack Overflow
+    href: https://stackoverflow.com/search?q=service-fabric-mesh
+  - name: Videoklipp
+    href: https://azure.microsoft.com/documentation/videos/index/?services=service-fabric-mesh
+  - name: Tjänstuppdateringar
+    href: https://azure.microsoft.com/updates/?product=service-fabric-mesh
+  - name: Regional tillgänglighet
+    href: https://azure.microsoft.com/regions/services/
+ms.openlocfilehash: aeb4b1581f73523927c7cdc087036c55dacb548f
+ms.sourcegitcommit: 32d218f5bd74f1cd106f4248115985df631d0a8c
+ms.translationtype: HT
+ms.contentlocale: sv-SE
+ms.lasthandoff: 09/24/2018
+ms.locfileid: "46997341"
